--- a/localisation/english/MD_NATO_events_l_english.yml
+++ b/localisation/english/MD_NATO_events_l_english.yml
@@ -95,8 +95,8 @@
  NATO.15.a: "Dissapointing."
  NATO.16.t: "[From.GetName] leaves NATO!"
  NATO.16.d: "The leader of [From.GetNameDef], [From.GetLeader], has today announced the country's intention to immediately pull out of the North Atlantic Treaty Organization and its affiliated alliances. This will weaken the military pact."
- NATO.16.o1: "A good choice."
- NATO.16.o2: "Interesting."
+ NATO.16.o1: "Good choice"
+ NATO.16.o2: "Interesting"
  NATO.17.t: "Shift in Politics"
  NATO.17.d: "Our recent shift into some less than democratic politics has cause NATO to abandon us. We no longer meet their silly requirements about so called democracy. We reject this notion and we are better off without NATO and their false protection!"
  NATO.17.o1: "Better Off Without Them!"
