--- a/localisation/english/MD_africa_events_l_english.yml
+++ b/localisation/english/MD_africa_events_l_english.yml
@@ -241,7 +241,7 @@
  senegal_md.100.d: "Conflict has erupted today in Senegal. The government has shattered due to the recent election in the country. [CSM.GetNameDef] has seceded from the state of Senegal and is actively fighting for its independence as the country is further plunged into turmoil."
  senegal_md.100.o1: "The rebellion will be crushed!"
  senegal_md.100.o2: "A new Senegal on the horizon!"
- senegal_md.100.o3: "A worrying development."
+ senegal_md.100.o3: "A Worrying Development"
 
  senegal_md.101.t: "End of the [SEN.GetAdjective] Civil War"
  senegal_md.101.d: "The warring factions in [SEN.GetName] have finally laid up their arms today as the fighting concludes."
@@ -394,7 +394,7 @@
  # African
  african.1.t: "The 2005 West African Drought"
  african.1.d: "The drought in West Africa was particularly worse in the regions of the Sahel in Mali, Niger and Burkina Faso. Pastoralist communities and our other nomadic communities are hit particularly hard by this drought. The drought comes after a period of no rain in the Sahel causing otherwise lush areas ideal for the pastoralist communities to be sparsely vegetated and agricultural works in the Sub-Sahara cause a great amount of suffering in the region."
- african.1.a: "Unfortunate..."
+ african.1.a: "Unfortunate"
  african.1.b: "Send in Support"
 
  # Mali
@@ -711,7 +711,7 @@
  haiti.9.d1: "France has decided to pay the reparations back to Haiti over the Independence Debt. The boon in income should allow our government to reinvest and improve our current economic standing."
  haiti.9.d2: "The French have declined to pay the reparations back over the Independence Indemnity Debt. The declination comes as a disappointment, but it does make sense that they would decline after all."
  haiti.9.a: "A Wonderful Day!"
- haiti.9.b: "Unfortunate..."
+ haiti.9.b: "Unfortunate"
 
  haiti.10.t: "Amiot Métayer and the Cannibal Army"
  haiti.10.d: "Amiot Métayer is a prominent gang leader in the north of the country. Métayer has been hired in the past by our government to help persuade the opposition to the correct side. Recently since his arson arrest late last year, he has led several anti-government riots and more. It is starting to take a toll on our image causing further disruptions in our country."
