--- a/localisation/english/MD_focus_AFG_l_english.yml
+++ b/localisation/english/MD_focus_AFG_l_english.yml
@@ -352,7 +352,7 @@
  AfghanistanNews.11.a: "We should have intercepted them with one of our MiGs."
  AfghanistanNews.12.t: "Hijacking of Ariana Airlines Flight 805"
  AfghanistanNews.12.d: "A group of nine Afghan men led by brothers Ali and Mohammed Safi who were fleeing the Taliban regime hijacked Ariana Afghan Airlines Flight 805, a Boeing 727 aircraft with the registration YA-FAY with 180 passengers and 7 crew on board. Flight 805 was a domestic flight from Kabul to Mazar-i-Sharif Airport.\n\nThe hijackers forced the crew to fly to London Stansted Airport in the United Kingdom after stopovers in Tashkent, Aktobe and Moscow. The siege of the aircraft lasted until 10th February. Whether or not the hijackers will be convicted is unknown as they are awaiting trial next year."
- AfghanistanNews.12.a: "Interesting."
+ AfghanistanNews.12.a: "Interesting"
  AfghanistanNews.12.b: "Terrorism is a scourge on humanity."
  AfghanistanNews.13.t: "Iran Sends refugees back to Afghanistan"
  AfghanistanNews.13.d: "After reaching an agreement with the UNHCR, Iran started a repatriation program that would send 7,700  Afghan refugees back to their homeland over the next three weeks."
@@ -477,7 +477,7 @@
  TalibanAttack.8.a: "How did the Afghan military let that happen?"
  TalibanAttack.9.t: "Taliban Targets Foreign Troops"
  TalibanAttack.9.d: "Today, a Taliban militant disguised as a local resident, quietly approached a convoy of foreign troops that were sent to our country detonated a bomb hidden in his turban. While nobody was injured in the first blast, another group of Taliban militants took advantage of the chaos created by the blast and used RPGs to fire rockets at the foreign troops.\n\nThe situation subsided after military reinforcements arrived but unfortunately this attack has resulted in many casualties and several military vehicles have been destroyed."
- TalibanAttack.9.a: "Damn!"
+ TalibanAttack.9.a: "Damn"
  TalibanAttack.10.t: "Our Service Members Killed in Taliban Attack"
  TalibanAttack.10.d: "Today, a Taliban militant disguised as a local resident, quietly approached a convoy of foreign troops that were sent to our country detonated a bomb hidden in his turban. While nobody was injured in the first blast, another group of Taliban militants took advantage of the chaos created by the blast and used RPGs to fire rockets at the foreign troops.\n\nThe situation subsided after reinforcements arrived but unfortunately this attack has resulted in many casualties of our service members and several military vehicles have been destroyed. Our local commander has been in contact with the Afghan military commanders to deal with the aftermath."
  TalibanAttack.10.a: "Send condolences to the fallen soldiers!"
