--- a/localisation/english/MD_focus_BRA_l_english.yml
+++ b/localisation/english/MD_focus_BRA_l_english.yml
@@ -755,7 +755,7 @@
  BRA_unite_the_people: " Unite the People"
  BRA_unite_the_people_desc: "Our people are very divided in terms of politics. We need to unite them!"
  BRA_monarchist_propaganda: "Monarchist Propaganda"
- BRA_monarchist_propaganda_desc: "To restore our Great Empire, our people must know more about the monarchy sytem."
+ BRA_monarchist_propaganda_desc: "To restore our Great Empire, our people must know more about the monarchy system."
  BRA_restauration: "Restoration"
  BRA_restauration_desc: "All Brazilians, empowered by the national renovation, will consolidate the birth of the Third Brazilian Empire! From now on, we will rise as a great power in the world stage!"
  BRA_acabar_isso: "Tem que acabar isso daí!"
