--- a/localisation/english/MD_focus_CES_l_english.yml
+++ b/localisation/english/MD_focus_CES_l_english.yml
@@ -459,18 +459,18 @@
 
  centrasiaev.2.t: "Kazakhstan asks for Investments"
  centrasiaev.2.d: "They ask for economical Investments. Should we agree?"
- centrasiaev.2.a: "Of Course!"
- centrasiaev.2.b: "Sorry, no."
+ centrasiaev.2.a: "Of Course"
+ centrasiaev.2.b: "Sorry, no"
 
  centrasiaev.3.t: "Uzbekistan asks for Investments"
  centrasiaev.3.d: "They ask for economical Investments. Should we agree?"
- centrasiaev.3.a: "Of Course!"
- centrasiaev.3.b: "Sorry, no."
+ centrasiaev.3.a: "Of Course"
+ centrasiaev.3.b: "Sorry, no"
 
  centrasiaev.4.t: "Kyrgyzstan asks for Investments"
  centrasiaev.4.d: "They ask for economical Investments. Should we agree?"
- centrasiaev.4.a: "Of Course!"
- centrasiaev.4.b: "Sorry, no."
+ centrasiaev.4.a: "Of Course"
+ centrasiaev.4.b: "Sorry, no"
 
  CES_special_economic_zones: "Special Economic Zones"
  CES_special_economic_zones_desc: "Central Asia recognizes the necessity of establishing special economic zones (SEZs) to stimulate economic development. These zones offer incentives like tax breaks, reduced regulations, and streamlined administrative processes to attract domestic and foreign investments. In Central Asia, SEZs serve as catalysts for diversifying economies, fostering innovation, and creating jobs, particularly in sectors like manufacturing, technology, and trade. By promoting business-friendly environments, these zones play a pivotal role in the region's efforts to attract investments, enhance infrastructure, and drive economic growth."
@@ -837,7 +837,7 @@
  centrasiaev.5.t: "[FROM.GetName] asks for Investments"
  centrasiaev.5.d: "[FROM.GetName] asks for Investments"
  centrasiaev.5.a: "Sure!"
- centrasiaev.5.b: "No."
+ centrasiaev.5.b: "No"
 
  centrasiaev.6.t: "[FROM.GetName] denied our offer."
  centrasiaev.6.d: "[FROM.GetName] denied our offer."
@@ -850,7 +850,7 @@
  centrasiaev.8.t: "[FROM.GetName] asks for debt reducement."
  centrasiaev.8.d: "[FROM.GetName] asks for debt reducement."
  centrasiaev.8.a: "Sure..."
- centrasiaev.8.b: "Sorry, no."
+ centrasiaev.8.b: "Sorry, no"
 
  centrasiaev.9.t: "Russia has denied our proposal."
  centrasiaev.9.d: "Russia has denied our proposal."
@@ -858,7 +858,7 @@
 
  centrasiaev.10.t: "Russia has accepted our proposal."
  centrasiaev.10.d: "Russia has accepted our proposal."
- centrasiaev.10.a: "Thanks!"
+ centrasiaev.10.a: "Thanks"
 
  centralnato.1.t: "Kazakhstan wants to join NATO"
  centralnato.1.d: "Kazakhstan recently became much more western aligned in recent years. Many of our minsiters and diplomats proposed enlargening NATO to propose Kazakhstan to join it. Should we do it?"
@@ -881,12 +881,12 @@
 
  centralnato.5.t: "[From.GetNameDef] rejected our offer"
  centralnato.5.d: "We recently submitted an application to NATO. [From.GetNameDef] reviewed it and unfortunately rejected it."
- centralnato.5.a: "Sadly..."
+ centralnato.5.a: "Sad"
 
  centralasianunion.1.t: "[From.GetNameDef] invites us to join the Central Asian Union"
  centralasianunion.1.d: "[From.GetNameDef] invites us to join the Central Asian Union, should we agree to it?"
- centralasianunion.1.a: "Of course!"
- centralasianunion.1.b: "Sorry, no."
+ centralasianunion.1.a: "Of Course"
+ centralasianunion.1.b: "Sorry, no"
 
  centralasianunion.2.t: "[From.GetNameDef] agreed to join the Central Asian Union"
  centralasianunion.2.d: "We recently made an offer to join the Central Asian Union to the state of [From.GetNameDef]. And they responded positively!"
@@ -894,7 +894,7 @@
 
  centralasianunion.3.t: "[From.GetNameDef] refused to join the Central Asian Union"
  centralasianunion.3.d: "We recently made an offer to join the Central Asian Union to the state of [From.GetNameDef]. And unfortunately, they turned down that offer"
- centralasianunion.3.a: "Sadly..."
+ centralasianunion.3.a: "Sad"
 
  centralkaz.1.t: "Our Kazakhstan"
  centralkaz.1.d: "Kazakhstan is an amazing country rich in history and nature. Its history goes back thousands of years, starting from ancient times, when nomadic peoples such as the Scythians and the Sakis inhabited this land. An important part of Kazakhstan's history was the formation of the Great Steppe, where unique cultures and ways of life were formed.\n\nOne of the important stages of Kazakhstan's history was the formation of khanates such as the Kazakh Khanate and the Zhungar Khanate. These periods were characterized by the development of trade, culture and art.\n\nIn the 19th century, Kazakhstan became an object of interest to world powers and was eventually incorporated into the Russian Empire. This period brought with it significant changes in Kazakhstan's society and economy.\n\nKazakhstan has a unique natural wealth, including vast steppes, majestic mountains and numerous lakes and rivers. This nature is now becoming increasingly important for maintaining the ecological balance in the region."
@@ -968,10 +968,10 @@
  centraluzb.4.b: "Hold democratic elections"
  centraluzb.5.t: "Results of protests in Andijan"
  centraluzb.5.d: "The events that took place in the Uzbek city of Andijan in May 2005 left an unforgettable trace in the history of Uzbekistan and caused a wide resonance in the international community. The Andijan riots were a real challenge to the Uzbek authorities and caused deep rifts in society.\n\nProtesters in Andijan demanded political reforms and freedom of speech, but the authorities' response was harsh and bloody. Footage and reports of the mass shootings attracted international media attention and led to international condemnation of Islam Karimov's regime.\n\nThe Andijan riots were a lesson to Uzbekistan about the need for dialog and the need to solve societal problems without resorting to violence. The events also emphasized the importance of respect for human rights and democratic values.\n\nFor the international community, the Andijan incident reminded the importance of supporting human rights and democratic initiatives in regions where they are violated. These events also emphasized the need for careful analysis and response to events occurring in countries with authoritarian regimes.\n\nThus, the Andijon riots were a tragic event, but they also drew attention to important human rights and democracy issues that remain relevant not only for Uzbekistan, but also for the entire global community..."
- centraluzb.5.a: "Sadly..."
+ centraluzb.5.a: "Sad"
  centraluzb.6.t: "Islam Abduganiyevich Karimov passed away"
  centraluzb.6.d: "Today, President Islam Karimov died of a cerebral hemorrhage. Shavkat Mironovich Mirziyoyev, the current Prime Minister of the Republic of Uzbekistan, became President of Uzbekistan."
- centraluzb.6.a: "Sadly..."
+ centraluzb.6.a: "Sad"
  centralkyr.3.t: "American airbase Manas"
  centralkyr.3.d: "In 2001, after the tragic events of September 11, the world faced the threat of terrorism, and in response to this challenge many countries united in the fight against world terrorism. We, too, can help defeat terrorism and provide territory for the Manas base. Will we do it?"
  centralkyr.3.a: "We'll give them a base"
@@ -1234,14 +1234,14 @@
  centrasiaev.12.d: "Certain political figures in our cabinet are preparing to make some corruption offers for you. Unlike general corruption scandals, this actually may be beneficial for us."
  centrasiaev.13.t: "[ROOT.GetName]'s cooperation with UNESCO"
  centrasiaev.13.d: "Central Asian countries have fostered a collaborative partnership with UNESCO, forming a robust alliance that prioritizes the preservation and promotion of their rich cultural heritage, natural resources, and educational systems. Together, they work towards the common goal of safeguarding historical sites, advancing inclusive education, and enhancing regional cooperation. This alliance not only strengthens the ties between the countries of Central Asia but also underscores their commitment to UNESCO's mission of fostering peace, cultural diversity, and sustainable development in the region."
- centrasiaev.13.a: "Great!"
+ centrasiaev.13.a: "Great"
 
  centralmigration.1.t: "We managed to regulate migration"
  centralmigration.1.d: "Successful migration management brings stability and control. The implemented measures and efforts have led to effective regulation of migrant flows and created a favorable environment."
  centralmigration.1.a: "Very good!"
  centralmigration.2.t: "We have failed to regulate migration"
  centralmigration.2.d: "Difficulties in managing the flow of migration, despite our attempts, have led to difficulties and unresolved issues in this area."
- centralmigration.2.a: "Sadly..."
+ centralmigration.2.a: "Sad"
 
  centralcity.1.t: "Changing the name of our capital city"
  centralcity.1.d: "Today, we have the opportunity to change the name of our capital to a more modern name than before. Which of these will be interesting for us?"
