--- a/localisation/english/MD_focus_DEN_l_english.yml
+++ b/localisation/english/MD_focus_DEN_l_english.yml
@@ -1037,7 +1037,7 @@
  denmark.4001.t: "Denmark Is Requesting Some Fighters!"
  denmark.4001.d1: "As part of NATO, Denmark is requesting we share some of our fighters to help protect the skies, doing so will surely maintain the unity of the organisation and will curry favour with [DEN.GetLeader]."
  denmark.4001.d2: "As part of our faction, Denmark is requesting we share some of our fighters to help protect the skies, doing so will surely maintain the unity of the organisation and will curry favour with [DEN.GetLeader]."
- denmark.4001.o1: "Of Course!"
+ denmark.4001.o1: "Of Course"
  denmark.4001.o2: "Not a Chance!"
  denmark.4002.t: "Our Allies Have Come To Our Aid!"
  denmark.4002.d1: "[USA.GetLeader] has finished signing off on some shiny new fighters for our brave airforce! [DEN.GetLeader] is said to be ecstatic with the showing from the [USA.GetAdjective] government in providing the aid and will be personally overseeing their arrival."
@@ -1136,7 +1136,7 @@
  denmark.43.a: "Send our condolences.."
  denmark.44.t: "Greenlandic Referendum"
  denmark.44.d: "Greenland, after being a Danish autonomous colony since 1979, has decided to hold a self-government referendum, in the result of which the majority voted for the referendum."
- denmark.44.a: "Great.."
+ denmark.44.a: "Great"
  denmark.45.t: "Faroese Referendum"
  denmark.45.d: "The Faroese people are holding their referendum and are looking to become independent from our country. It is their right to become an autonomous subject within us and we are not going to hold them back. Allow them their self-rule."
  denmark.45.a: "Interesting"
@@ -1217,7 +1217,7 @@
  denmark_news.1.d: "News from Denmark has come out stating the [DEN.GetAdjective] Queen has chosen to abdicate her throne via pressure of the growing left extremism in Denmark. The supporters of Danmarks Kommunistiske Parti (DKP) have taken to the streets in happiness as one of the last bastions of the old ways has finally been removed. The former queen has taken refuge with the House of Windsor in Great Britian.\n"
  denmark_news.1.o1: "Worrying for our crown"
  denmark_news.1.o2: "Good Riddance!"
- denmark_news.1.o3: "Interesting development"
+ denmark_news.1.o3: "Interesting Development"
 
  # Ideas
  DEN_idea_joint_material_command: "Joint Material Command"
