--- a/localisation/english/MD_focus_EU_USoE_l_english.yml
+++ b/localisation/english/MD_focus_EU_USoE_l_english.yml
@@ -316,13 +316,13 @@
 
  USoEevent.1.t: "[FROM.GetName] offers a non-aggression pact"
  USoEevent.1.d: "[FROM.GetName] offers a non-aggression pact."
- USoEevent.1.a: "Okay!"
- USoEevent.1.b: "No!"
+ USoEevent.1.a: "Okay"
+ USoEevent.1.b: "No"
 
  USoEevent.2.t: "[FROM.GetName] offers an alliance"
  USoEevent.2.d: "[FROM.GetName] offers an alliance."
- USoEevent.2.a: "Okay!"
- USoEevent.2.b: "No!"
+ USoEevent.2.a: "Okay"
+ USoEevent.2.b: "No"
 
  USoEevent.3.t: "[FROM.GetName] offers alliance or attack"
  USoEevent.3.d: "[FROM.GetName] offers an alliance or they will attack us."
@@ -336,15 +336,15 @@
 
  USoEevent.5.t: "Environmental Imperialism in [FROM.GetName] - Success!"
  USoEevent.5.d: "[FROM.GetName] has accepted our environmental demands."
- USoEevent.5.a: "Okay!"
+ USoEevent.5.a: "Okay"
 
  USoEevent.6.t: "Environmental Imperialism in [FROM.GetName] - Sanctions Imposed!"
  USoEevent.6.d: "[FROM.GetName] has not accepted our environmental demands. Sanctions are imposed!"
- USoEevent.6.a: "Okay!"
+ USoEevent.6.a: "Okay"
 
  USoEevent.7.t: "Environmental Sanctions broken by [FROM.GetName]!"
  USoEevent.7.d: "[FROM.GetName] has broken our sanctions."
- USoEevent.7.a: "Okay!"
+ USoEevent.7.a: "Okay"
 
  ######################
  ### USoE Decisions ###
