--- a/localisation/english/MD_focus_EU_l_english.yml
+++ b/localisation/english/MD_focus_EU_l_english.yml
@@ -867,11 +867,11 @@
  ### EU-Turkey deal ###
  EUevent.2.t: "EU-Turkey deal"
  EUevent.2.d: "§C[EUU.GetFlag] The European Union§! and [TUR.GetNameWithFlag] reached an agreement aimed at stopping the flow of irregular migration from Turkey to Europe. According to the EU-Turkey Statement, all new irregular migrants and asylum seekers arriving from Turkey to the Greek islands and whose applications for asylum have been declared inadmissible should be returned to Turkey. §C[EUU.GetFlag] The European Union§! will pay 3 billion Euro for the Facility for Refugees in Turkey."
- EUevent.2.a: "Okay!"
+ EUevent.2.a: "Okay"
 
  EUevent.17.t: "EU-Turkey deal"
  EUevent.17.d: "§C[EUU.GetFlag] The European Union§! and [TUR.GetNameWithFlag] reached an agreement aimed at stopping the flow of irregular migration from Turkey to Europe. According to the EU-Turkey Statement, all new irregular migrants and asylum seekers arriving from Turkey to the Greek islands and whose applications for asylum have been declared inadmissible should be returned to Turkey. §C[EUU.GetFlag] The European Union§! will pay 3 billion Euro for the Facility for Refugees in Turkey."
- EUevent.17.a: "Okay!"
+ EUevent.17.a: "Okay"
 
  ### United States of Europe ###
  EUevent.3.t: "United States of Europe"
@@ -914,14 +914,14 @@
 
  EUevent.18.t: "[FROM.GetNameWithFlag] asks us to host a Military Exercise"
  EUevent.18.d: "[FROM.GetNameWithFlag] asks us to host a Military Exercise at the border. A Military Exercise at our border could raise the World Tension so it is important we weigh our options carefully before allowing the military exercise."
- EUevent.18.a: "Yes!"
- EUevent.18.b: "No!"
+ EUevent.18.a: "Yes"
+ EUevent.18.b: "No"
 
  ###
  EUevent.20.t: "Additional Pre-accession Assistance for [FROM.GetNameWithFlag]"
  EUevent.20.d: "[FROM.GetNameWithFlag] has failed to do the necessary reforms for meeting the EU accession criteria. We should give them additional financial and technical assistance."
- EUevent.20.a: "Yes!"
- EUevent.20.b: "No!"
+ EUevent.20.a: "Yes"
+ EUevent.20.b: "No"
 
  # Office is Free
  EUevent.21.t: "An Office is Open"
@@ -936,13 +936,13 @@
  ### EU election ###
  EUelection.1.t: "[GetYear] European Parliament Election"
  EUelection.1.d: "Elections to the European Parliament take place every five years."
- EUelection.1.a: "Okay!"
+ EUelection.1.a: "Okay"
 
  ### EU_news.txt
  ### EU News Events ###
  EU_news.1.t: "State of the European Union"
  EU_news.1.d: "The European Union is in good shape."
- EU_news.1.a: "Okay!"
+ EU_news.1.a: "Okay"
 
  ### EU Exit by accident (troika reforms) ###
  EU_news.20.t: "Exit by Accident"
@@ -957,7 +957,7 @@
  ### Article 50 is revoked ###
  EU_news.22.t: "Article 50 is revoked"
  EU_news.22.d: "[FROM.GetNameWithFlag] has revoked Article 50 and stays in §C[EUU.GetFlag] The European Union§!."
- EU_news.22.a: "Okay!"
+ EU_news.22.a: "Okay"
 
  ### withdrawal_treaty ###
  EU_news.23.t: "Withdrawal Treaty"
@@ -967,21 +967,21 @@
  ### EU_extend_Article_50 ###
  EU_news.24.t: "Article 50 Extention"
  EU_news.24.d: "[FROM.GetNameWithFlag] and the member states of §C[EUU.GetFlag] The European Union§! have agreed to extend Article 50 for three months. Now [FROM.GetNameWithFlag] will leave the §C[EUU.GetFlag] The European Union§! in three months."
- EU_news.24.a: "Okay!"
+ EU_news.24.a: "Okay"
 
  ### Article 50 is triggered ###
  EU_news.34.t: "Article 50 is triggered"
  EU_news.34.d: "[FROM.GetNameWithFlag] has triggered Article 50 and will leave §C[EUU.GetFlag] The European Union§! in two years."
- EU_news.34.a: "Okay!"
+ EU_news.34.a: "Okay"
 
  ### EuroNavy Transfer Navy ###
  EU_news.25.t: "Transfer of Fleet to EuroNavy"
  EU_news.25.d: "[FROM.GetNameWithFlag] is transferring its Fleet to [FROM.FROM.GetNameWithFlag] the holder of the office of Secretary General of EuroNavy."
- EU_news.25.a: "Okay!"
+ EU_news.25.a: "Okay"
 
  EU_news.26.t: "Transfer of Fleet rejected"
  EU_news.26.d: "[FROM.GetNameWithFlag] will not transfer its Fleet to EuroNavy."
- EU_news.26.a: "Okay!"
+ EU_news.26.a: "Okay"
 
  ### Country joins EU ###
  EU_news.27.t: "A country joins The European Union"
@@ -991,136 +991,136 @@
  ### euroscepticism decline -3% ###
  EU_news.28.t: "Euroscepticism Decline (3%)"
  EU_news.28.d: "Euroscepticism is declining in [EUU.GetFlag] The European Union."
- EU_news.28.a: "Okay!"
+ EU_news.28.a: "Okay"
 
  ### euroscepticism decline -5% ###
  EU_news.29.t: "Euroscepticism Decline (5%)"
  EU_news.29.d: "Euroscepticism is declining in [EUU.GetFlag] The European Union."
- EU_news.29.a: "Okay!"
+ EU_news.29.a: "Okay"
 
  ### euroscepticism rise 3% ###
  EU_news.30.t: "Euroscepticism Rise (3%)"
  EU_news.30.d: "Euroscepticism is rising in [EUU.GetFlag] The European Union."
- EU_news.30.a: "Okay!"
+ EU_news.30.a: "Okay"
 
  ### euroscepticism rise 5% ### ???
  EU_news.31.t: "Euroscepticism Rise (5%)"
  EU_news.31.d: "Euroscepticism is rising in [EUU.GetFlag] The European Union."
- EU_news.31.a: "Okay!"
+ EU_news.31.a: "Okay"
 
  ### ECB_Outright_Monetary_Transactions ###
 
  EU_news.32.t: "OMT Program"
  EU_news.32.d: "The ECB has started its OMT Program."
- EU_news.32.a: "Okay!"
+ EU_news.32.a: "Okay"
 
  EU_news.33.t: "OMT Program ends"
  EU_news.33.d: "The current OMT Program of the ECB ends."
- EU_news.33.a: "Okay!"
+ EU_news.33.a: "Okay"
 
  EU_news.45.t: "Reduce OMT Program"
  EU_news.45.d: "The ECB has reduced its OMT Program.\n§YOMT Size Limit§!: Add §R-$200§! billion.\nAll member states with §Yinterest rate§! < §R4.0%§!: Add §G-5%§! Euroscepticism.\nAll member states with §Yinterest rate§! > §R4.0%§!: Add §R+5%§! Euroscepticism.\n"
- EU_news.45.a: "Okay!"
+ EU_news.45.a: "Okay"
 
  EU_news.46.t: "Expand OMT Program"
  EU_news.46.d: "The ECB has expanded its OMT Program.\n§YOMT Size Limit§!: Add §G+$200§! billion.\nAll member states with §Yinterest rate§! < §R4.0%§!: Add §R+5%§! Euroscepticism.\nAll member states with §Yinterest rate§! > §R4.0%§!: Add §G-5%§! Euroscepticism.\n"
- EU_news.46.a: "Okay!"
+ EU_news.46.a: "Okay"
 
  ### EDU news ###
 
  EU_news.47.t: "European Defence Union (EDU)"
  EU_news.47.d: "In order to attain the necessary strategic autonomy to defend their collective interests, respond to external conflicts and crises, and project security in our neighbourhood the member states have decided to form the European Defence Union (EDU) as a military alliance and to collectively leave NATO."
- EU_news.47.a: "Okay!"
+ EU_news.47.a: "Okay"
 
  EU_news.48.t: "European Defence Union (EDU)"
  EU_news.48.d: "To attain the necessary strategic autonomy to defend their collective interests, respond to external conflicts and crises, and project security in European neighbourhood the member states of [EUU.GetNameWithFlag] have decided to form the European Defence Union (EDU) as a military alliance and to collectively leave NATO."
- EU_news.48.a: "Okay!"
+ EU_news.48.a: "Okay"
 
  EU_news.49.t: "A NATO member leaves and joins the EDU"
  EU_news.49.d: "[FROM.GetNameWithFlag] leaves the NATO and joins [EUU.GetFlag] The European Union and the European Defence Union (EDU)."
- EU_news.49.a: "Okay!"
+ EU_news.49.a: "Okay"
 
  ### Military Exercise
 
  EU_news.50.t: "Military Exercise at the Border"
  EU_news.50.d: "[FROM.GetNameWithFlag] is executing a Military Exercise at our border. We should consider to counter it."
- EU_news.50.a: "Okay!"
+ EU_news.50.a: "Okay"
 
  EU_news.51.t: "Military Exercise is countered"
  EU_news.51.d: "[FROM.GetNameWithFlag] has countered our Military Exercise and is executing its own one at their border."
- EU_news.51.a: "Okay!"
+ EU_news.51.a: "Okay"
 
  ### new euro campaign events
  ### pro_european_campaign success ###
  EU_news.35.t: "Pro-European Campaign - Success!"
  EU_news.35.d: "[FROM.GetNameWithFlag] started a pro-European campaign. It was a success! Euroscepticism is declining 3% in [EUU.GetFlag] The European Union and for all potential member states."
- EU_news.35.a: "Okay!"
+ EU_news.35.a: "Okay"
 
  ### pro_european_campaign great success ###
  EU_news.36.t: "Pro-European Campaign - Great Success!"
  EU_news.36.d: "[FROM.GetNameWithFlag] started a pro-European campaign. It was a great success! Euroscepticism is declining 5% in [EUU.GetFlag] The European Union and for all potential member states."
- EU_news.36.a: "Okay!"
+ EU_news.36.a: "Okay"
 
  ### pro_european_campaign success ###
  EU_news.37.t: "Pro-European Campaign - Failure!"
  EU_news.37.d: "[FROM.GetNameWithFlag] started a pro-European campaign. It was a failure! Nothing changed."
- EU_news.37.a: "Okay!"
+ EU_news.37.a: "Okay"
 
  ### euroscepticism_campaign success ###
  EU_news.38.t: "Euroscepticism Campaign - Success!"
  EU_news.38.d: "[FROM.GetNameWithFlag] started a Euroscepticism Campaign. It was a success! Euroscepticism is rising 3% in [EUU.GetFlag] The European Union and for all potential member states."
- EU_news.38.a: "Okay!"
+ EU_news.38.a: "Okay"
 
  ### euroscepticism_campaign great success ###
  EU_news.39.t: "Euroscepticism Campaign - Great Success!"
  EU_news.39.d: "[FROM.GetNameWithFlag] started a Euroscepticism Campaign. It was a great success! Euroscepticism is rising 5% in [EUU.GetFlag] The European Union and for all potential member states."
- EU_news.39.a: "Okay!"
+ EU_news.39.a: "Okay"
 
  ### euroscepticism_campaign success ###
  EU_news.40.t: "Euroscepticism Campaign - Failure!"
  EU_news.40.d: "[FROM.GetNameWithFlag] started a Euroscepticism campaign. It was a failure! Nothing changed."
- EU_news.40.a: "Okay!"
+ EU_news.40.a: "Okay"
 
  ### root_pro_european_campaign success ###
  EU_news.41.t: "Pro-European Campaign - Success!"
  EU_news.41.d: "[FROM.GetNameWithFlag] started a pro-European campaign. It was a success! Euroscepticism is declining 5% in [ROOT.GetNameWithFlag]."
- EU_news.41.a: "Okay!"
+ EU_news.41.a: "Okay"
 
  ### root_pro_european_campaign success ###
  EU_news.42.t: "Pro-European Campaign - Failure!"
  EU_news.42.d: "[FROM.GetNameWithFlag] started a pro-European campaign. It was a failure! Nothing changed."
- EU_news.42.a: "Okay!"
+ EU_news.42.a: "Okay"
 
  ### root_euroscepticism_campaign success ###
  EU_news.43.t: "Euroscepticism Campaign - Success!"
  EU_news.43.d: "[FROM.GetNameWithFlag] started a Euroscepticism Campaign. It was a success! Euroscepticism is rising 5% in [ROOT.GetNameWithFlag]."
- EU_news.43.a: "Okay!"
+ EU_news.43.a: "Okay"
 
  ### euroscepticism_campaign success ###
  EU_news.44.t: "Euroscepticism Campaign - Failure!"
  EU_news.44.d: "[FROM.GetNameWithFlag] started a Euroscepticism Campaign. It was a failure! Nothing changed."
- EU_news.44.a: "Okay!"
+ EU_news.44.a: "Okay"
 
  ### EU election ###
  EU_news.52.t: "Result of the [THIS.GetAdjective] [GetYear] European Parliament Election"
  EU_news.52.d: "This is the vote of the [THIS.GetAdjective] people. The [THIS.GetAdjective] political parties will send the following MEP to the European Parliament:\n [THIS.Western_Autocracy_L_icon] [?THIS.MEP_Western_Autocracy], [THIS.conservatism_L_icon] [?THIS.MEP_conservatism], [THIS.liberalism_L_icon] [?THIS.MEP_liberalism], [THIS.socialism_L_icon] [?THIS.MEP_socialism], [THIS.Communist-State_L_icon] [?THIS.MEP_Communist-State], [THIS.anarchist_communism_L_icon] [?THIS.MEP_anarchist_communism], [THIS.Conservative_L_icon] [?THIS.MEP_Conservative], [THIS.Autocracy_L_icon] [?THIS.MEP_Autocracy], [THIS.Mod_Vilayat_e_Faqih_L_icon] [?THIS.MEP_Mod_Vilayat_e_Faqih], [THIS.Vilayat_e_Faqih_L_icon] [?THIS.MEP_Vilayat_e_Faqih], [THIS.Kingdom_L_icon] [?THIS.MEP_Kingdom], [THIS.Caliphate_L_icon] [?THIS.MEP_Caliphate], [THIS.Neutral_Muslim_Brotherhood_L_icon] [?THIS.MEP_Neutral_Muslim_Brotherhood], [THIS.Neutral_Autocracy_L_icon] [?THIS.MEP_Neutral_Autocracy], [THIS.Neutral_conservatism_L_icon] [?THIS.MEP_Neutral_conservatism], [THIS.oligarchism_L_icon] [?THIS.MEP_oligarchism], [THIS.Neutral_Libertarian_L_icon] [?THIS.MEP_Neutral_Libertarian], [THIS.Neutral_green_L_icon] [?THIS.MEP_Neutral_green], [THIS.neutral_Social_L_icon] [?THIS.MEP_neutral_Social], [THIS.Neutral_Communism_L_icon] [?THIS.MEP_Neutral_Communism], [THIS.Nat_Populism_L_icon] [?THIS.MEP_Nat_Populism], [THIS.Nat_Fascism_L_icon] [?THIS.MEP_Nat_Fascism], [THIS.Nat_Autocracy_L_icon] [?THIS.MEP_Nat_Autocracy], [THIS.Monarchist_L_icon] [?THIS.MEP_Monarchist]"
- EU_news.52.a: "Okay!"
+ EU_news.52.a: "Okay"
 
  EU_news.53.t: "Result of the 1999 European Parliament Election"
  EU_news.53.d: "This is the vote of the [THIS.GetAdjective] people. The [THIS.GetAdjective] political parties will send the following MEP to the European Parliament:\n [THIS.Western_Autocracy_L_icon] [?THIS.MEP_Western_Autocracy], [THIS.conservatism_L_icon] [?THIS.MEP_conservatism], [THIS.liberalism_L_icon] [?THIS.MEP_liberalism], [THIS.socialism_L_icon] [?THIS.MEP_socialism], [THIS.Communist-State_L_icon] [?THIS.MEP_Communist-State], [THIS.anarchist_communism_L_icon] [?THIS.MEP_anarchist_communism], [THIS.Conservative_L_icon] [?THIS.MEP_Conservative], [THIS.Autocracy_L_icon] [?THIS.MEP_Autocracy], [THIS.Mod_Vilayat_e_Faqih_L_icon] [?THIS.MEP_Mod_Vilayat_e_Faqih], [THIS.Vilayat_e_Faqih_L_icon] [?THIS.MEP_Vilayat_e_Faqih], [THIS.Kingdom_L_icon] [?THIS.MEP_Kingdom], [THIS.Caliphate_L_icon] [?THIS.MEP_Caliphate], [THIS.Neutral_Muslim_Brotherhood_L_icon] [?THIS.MEP_Neutral_Muslim_Brotherhood], [THIS.Neutral_Autocracy_L_icon] [?THIS.MEP_Neutral_Autocracy], [THIS.Neutral_conservatism_L_icon] [?THIS.MEP_Neutral_conservatism], [THIS.oligarchism_L_icon] [?THIS.MEP_oligarchism], [THIS.Neutral_Libertarian_L_icon] [?THIS.MEP_Neutral_Libertarian], [THIS.Neutral_green_L_icon] [?THIS.MEP_Neutral_green], [THIS.neutral_Social_L_icon] [?THIS.MEP_neutral_Social], [THIS.Neutral_Communism_L_icon] [?THIS.MEP_Neutral_Communism], [THIS.Nat_Populism_L_icon] [?THIS.MEP_Nat_Populism], [THIS.Nat_Fascism_L_icon] [?THIS.MEP_Nat_Fascism], [THIS.Nat_Autocracy_L_icon] [?THIS.MEP_Nat_Autocracy], [THIS.Monarchist_L_icon] [?THIS.MEP_Monarchist]"
- EU_news.53.a: "Okay!"
+ EU_news.53.a: "Okay"
 
  EU_news.54.t: "Result of the 2014 European Parliament Election"
  EU_news.54.d: "This is the vote of the [THIS.GetAdjective] people. The [THIS.GetAdjective] political parties will send the following MEP to the European Parliament:\n [THIS.Western_Autocracy_L_icon] [?THIS.MEP_Western_Autocracy], [THIS.conservatism_L_icon] [?THIS.MEP_conservatism], [THIS.liberalism_L_icon] [?THIS.MEP_liberalism], [THIS.socialism_L_icon] [?THIS.MEP_socialism], [THIS.Communist-State_L_icon] [?THIS.MEP_Communist-State], [THIS.anarchist_communism_L_icon] [?THIS.MEP_anarchist_communism], [THIS.Conservative_L_icon] [?THIS.MEP_Conservative], [THIS.Autocracy_L_icon] [?THIS.MEP_Autocracy], [THIS.Mod_Vilayat_e_Faqih_L_icon] [?THIS.MEP_Mod_Vilayat_e_Faqih], [THIS.Vilayat_e_Faqih_L_icon] [?THIS.MEP_Vilayat_e_Faqih], [THIS.Kingdom_L_icon] [?THIS.MEP_Kingdom], [THIS.Caliphate_L_icon] [?THIS.MEP_Caliphate], [THIS.Neutral_Muslim_Brotherhood_L_icon] [?THIS.MEP_Neutral_Muslim_Brotherhood], [THIS.Neutral_Autocracy_L_icon] [?THIS.MEP_Neutral_Autocracy], [THIS.Neutral_conservatism_L_icon] [?THIS.MEP_Neutral_conservatism], [THIS.oligarchism_L_icon] [?THIS.MEP_oligarchism], [THIS.Neutral_Libertarian_L_icon] [?THIS.MEP_Neutral_Libertarian], [THIS.Neutral_green_L_icon] [?THIS.MEP_Neutral_green], [THIS.neutral_Social_L_icon] [?THIS.MEP_neutral_Social], [THIS.Neutral_Communism_L_icon] [?THIS.MEP_Neutral_Communism], [THIS.Nat_Populism_L_icon] [?THIS.MEP_Nat_Populism], [THIS.Nat_Fascism_L_icon] [?THIS.MEP_Nat_Fascism], [THIS.Nat_Autocracy_L_icon] [?THIS.MEP_Nat_Autocracy], [THIS.Monarchist_L_icon] [?THIS.MEP_Monarchist]"
- EU_news.54.a: "Okay!"
+ EU_news.54.a: "Okay"
 
  EU_news.55.t: "Bill from Brussels"
  EU_news.55.d: "Contribution and Distribution of the EU Budget of [GetYear]:\n[THIS.GetNameWithFlag] has to contribute [?THIS.EU_budget_contribution|§0] billion and gets [?THIS.EU_budget_total_gain|§2] billion from the EU budget. So [THIS.GetNameWithFlag] has a net rate of [?THIS.EU_budget_net|§+2] billion."
- EU_news.55.a: "Okay!"
+ EU_news.55.a: "Okay"
 
  EU_news.56.t: "Bill from Brussels"
  EU_news.56.d: "Contribution of the EU Budget of [GetYear]:\n[THIS.GetNameWithFlag] has to contribute [?THIS.EU_budget_contribution|§0] billion. The budget right of [THIS.GetNameWithFlag] were suspended so the [?THIS.EU_budget_total_gain|§2] billion subsidies from the EU budget are not paid off."
- EU_news.56.a: "Okay!"
+ EU_news.56.a: "Okay"
 
  ##########################
  ##########################
