--- a/localisation/english/MD_focus_FRA_l_english.yml
+++ b/localisation/english/MD_focus_FRA_l_english.yml
@@ -420,7 +420,7 @@
  France_news.97.d2: "Seeking a new internal and external allegiance of the motherland, French President [FRA.GetLeader] announced a left-ward shift in economic and foreign policy. Stressing Egalité over the two other French mottos, universal equality of all French citizens shall soon be achieved - according to the government. The French government and ours share a similar view in their view of the world. The communists and leftists of the world will unite in our cause to bring the workers above their shackles."
  France_news.97.o1: "Vive la France!"
  France_news.97.o2: "Good for them."
- France_news.97.o3: "Interesting."
+ France_news.97.o3: "Interesting"
  France_news.98.t: "France Endorses Fraternité."
  France_news.98.d: "France has been unhappy with the 'heartless and degenerate' policies endorsed in the world recently. French President [FRA.GetLeader] has taken a clear new authoritarian streak in terms of policies and rhetoric.\n\n[FRA.GetLeader] promises this will lead to fraternity between the brothers and sisters under the French flag - but international observers are skeptical. In the words of an Irish journalist: 'A democracy should not need a dictator to become more democratic.'"
  France_news.98.o1: "Vive la France!"
@@ -437,7 +437,7 @@
  France_news.100.d: "French troops entered the two minor countries at France's borders this morning. The principalities of Andorra and Monaco have become the youngest victims of French military aggression.\n\nLacking considerable military forces of their own, Andorra and Monaco are at the mercy of France, upon which they previously depended for defense."
  France_news.100.o1: "Glory to France!"
  France_news.100.o2: "Welp, that's it then."
- France_news.100.o3: "Good."
+ France_news.100.o3: "Good"
  France_news.100.o4: "Unacceptable!"
  France_news.100.o5: "Who cares?"
  France_news.101.t: "France Demands its 'Natural Borders'"
@@ -453,7 +453,7 @@
  france_md.1.t: "Euro Investments"
  france_md.1.d: "The French have come to us today with an interesting proposal. They started the early stages of proper economic cooperation began with European nations adopting the Euro. Utilizing a common currency allows our citizens to travel beyond borders without worrying about currency exchanges or conversion. Also, according to the French diplomats, the introduction of the Euro should help in conveying greater economic ties with our fellow Europeans. The treaty presented to us at the moment is a request for the French to front a bill of investment in our great country."
  france_md.1.a: "Sign the Agreements"
- france_md.1.b: "Never!"
+ france_md.1.b: "Never"
  france_md.2.t: "[From.GetName] Accepts Our Investments!"
  france_md.2.d: "Good news! [From.GetName] has accepted our agreements! They have decided that closer economic ties with France are the way to go."
  france_md.2.a: "Great Choice."
@@ -470,7 +470,7 @@
  france_md.5.b: "Absolutely Not!"
  france_md.6.t: "[From.GetName] Supports Unification!"
  france_md.6.d: "[From.GetName] has returned the treaties they have received during the Convention. In wonderful news, they have decided to support our great endeavor and to seek a new Europe!"
- france_md.6.a: "Good."
+ france_md.6.a: "Good"
  france_md.7.t: "[From.GetName] Flees the Union!"
  france_md.7.d: "[From.GetName] has destroyed our great legislation and degraded our credibility. The delegates have also started to draft and cite legislation to pursue Article 50 and flee our great union."
  france_md.7.a: "They are Making a Mistake"
@@ -489,7 +489,7 @@
  france_md.11.t: "CNES - NASA Cooperation"
  france_md.11.d: "CNES leaders have come to us today to discuss the possibility of extended cooperation between NASA and the CNES. They state that there is much to learn from space, and having the backing of another large space program could help one another significantly. The agreement that is presented states we would each upfront cost $10b dollars to pursue greater ties scientifically."
  france_md.11.a: "A Worthy Agreement"
- france_md.11.b: "No."
+ france_md.11.b: "No"
 
  france_md.100.t: "The Armenia Support"
  france_md.100.d: "Armenia and their struggle remind us much of ourselves. Their struggle against Azerbaijan in Artaskh reminds us much of ourselves. Supporting them in their efforts is not only a desired but also needed for our interests in the region. We can provide material, financial, or political support in their conflict. How should we help our friends in Yerevan?"
@@ -577,15 +577,15 @@
 
  france_md.500.t: "The Lumio Attacks"
  france_md.500.d: "A small commune in Lumio has been struck by the National Liberation Front of Corsica. The attack did not cause any loss of life but it did leave a substantial amount of damage on the small amount of military infrastructure in the commune as well as leaving several gendarmes injured."
- france_md.500.a: "Unfortunate..."
+ france_md.500.a: "Unfortunate"
 
  france_md.501.t: "The Hotel Attacks in Marseille"
  france_md.501.d: "A string of minor bombings have been carried out in Marseille. The National Liberation Front of Corsica has claimed responsibility for the strikes. Several people have been hospitalized and injured due to the incidents, but it does not appear that they have any intention of launching additional bomb strikes on any other hotels."
- france_md.501.a: "Unfortunate..."
+ france_md.501.a: "Unfortunate"
 
  france_md.504.t: "The McDonald's Bombing"
  france_md.504.d: "A small amount of Breton nationalists have decided to bomb a local McDonald's in Quévert, Brittany. The bomb exploded killing one person in the McDonald's. The ongoing investigation has not produced much in the way of evidence if it is a larger plot, but a tragic occurrence."
- france_md.504.a: "Unfortunate..."
+ france_md.504.a: "Unfortunate"
 
  # French Decision Categories
  FRA_french_space_decision_category: "The French Space Program & CNES"
