--- a/localisation/english/MD_focus_GER_l_english.yml
+++ b/localisation/english/MD_focus_GER_l_english.yml
@@ -1194,7 +1194,7 @@
  GER_consult_with_an_advisor_desc: "Confused? We'll have an advisor come and give you the run down on what to do."
  germany_divide.69420.t: "Advisors Tip"
  germany_divide.69420.d: "It appears that you are a little stuck on how to improve the lives of East Germans! Well, worry not! Everything you need to know has been written in this report. In order to increase the productivity of the states, we will need to build factories, improve our tech, build better network infrastructure, and maintain a steady economic cycle to give jobs to the people. We can also grant them funds to help increase their productivity by 10, but it can get a little costly. Additionally, more infrastructure will help keep East Germans happy."
- germany_divide.69420.a: "Okay."
+ germany_divide.69420.a: "Okay"
 #
  GER_bavarian_nationalism: "[BAY.GetFlag] Bavarian Nationalism"
  GER_bavarian_nationalism_desc: "Some [BAY.GetFlag] §HBavarian's§! have been vying for independence ever since the creation of an unified [GER.GetFlag] German state. Many [BAY.GetFlag] §HBavarian's§! accuse the [GER.GetFlag] German government of intruding their autonomy, and therefore, §Hnationalism§! has risen in the region. [BAY.GetFlag] §HBavaria§! is one of our more important regions as it hosts quite a lot of tourists every year, and it's one of our more wealthier areas.\n\n[BAY.GetFlag] §HBavarian nationalism§! will grow only when our economy is weakened. If our economy is in a §Rstagnation, recession§! or a §Rdepression§!, there is a §H40%§! chance that [BAY.GetFlag] §HBavarian nationalism§! will grow by §H1%§! at the end of each week as a result of [BAY.GetFlag] §HBavarian§! anger. If we have §Hfast growth§! or §Heconomic boom§!, [BAY.GetFlag] §HBavarian Nationalism§! will naturally come down.\n\nOnce [BAY.GetFlag] §HBavarian nationalism§! reaches §H100%§!, they will demand independence."
@@ -1293,7 +1293,7 @@
  germany.402.c: "Forget it, just give them a little off the top"
  germany.401.t: "NPD found guilty"
  germany.401.d: "The NPD has been found guilty of trying to harm German democracy, and therefore a ban has been placed upon the right wing party."
- germany.401.a: "Great!"
+ germany.401.a: "Great"
  germany.5.t: "Bomb Attack In Düsseldorf"
  germany.5.d: "The group of ten had just finished Their German class in Düsseldorf, and walked to the train station to go home. As they were walking, right next to them was a plastic bag, which contained a bomb, and it suddenly exploded.\n\nSome of the injuries were life treatening, but luckily no one died, thanks to the fast reaction of bystanders and the following operations in the hospital.\n\nThe police already announced plans to create the 'Ermittlungskommission Ackerstraße' to find the perpetrator. Though it is unknown who was behind the attacks, it is likely that the attack was driven by racism, as 9 of the 12 injured persons were jews and almost all were foreigners."
  germany.5.a: "Find the terrorists!"
@@ -1311,7 +1311,7 @@
  germany.7.a: "let's see how it goes"
  germany.8.t: "The vote fails"
  germany.8.d: "Our motion has failed to gather enough support for it to succeed"
- germany.8.a: "Damn it"
+ germany.8.a: "Damn"
  germany.9.t: "German elections day"
  germany.9.d: "The time has come for the German people to take the stand and decide the fate and future of their beloved nation; the future is in the hands of the public's opinion..."
  germany.9.a: "I Love Democracy"
@@ -1409,7 +1409,7 @@
  germany.35.a: "Hopefully this time everything will be alright"
  germany.36.t: "Berlin banking scandal"
  germany.36.d: "The leaders of the Berlin city administration met yesterday in emergency session yesterday to discuss the German capital's worst financial crisis since the second world war. The crisis is a huge blow to Berlin's ambition to become the "Capital of Europe" and poses an immediate threat to some of the continent's most treasured cultural assets"
- germany.36.a: "ok"
+ germany.36.a: "Okay"
  germany.37.t: "Investigative committee"
  germany.37.d: "TODO"
  germany.37.a: "TODO"
@@ -1504,7 +1504,7 @@
  Germany.205.b: "No, thanks"
  Germany.206.t: "[FROM.GetName] accepts our offer!"
  Germany.206.d: "[FROM.GetName] has accepted our offer to enter a defensive pact, and we have agreed to come to eachothers rescue in times of need."
- Germany.206.a: "Great!"
+ Germany.206.a: "Great"
  Germany.207.t: "[FROM.GetName] has rejected our offer"
  Germany.207.d: "The [FROM.GetAdjective] have rejected our request to a defensive pact, and this has led to a souring of our relations.."
  Germany.207.a: "Damn"
@@ -1570,14 +1570,14 @@
  Germany.221.a: "Good.."
  Germany.222.t: "[FROM.GetName] Refuses to Comply"
  Germany.222.d: "[FROM.GetName] has refused to comply with our request, showing that they are just mere puppets of the Americans."
- Germany.222.a: "Unfortunate.."
+ Germany.222.a: "Unfortunate"
  Germany.223.t: "An Invitation to the Union"
  Germany.223.d: "[GER.GetName] has invited us to join their socialist union. This comes as growing pressure from socialist elements in our nation has pushed our government to the edge, forcing us to figure out a quick solution. If we want the best for our people, and their safety, then we will have to comply.."
  Germany.223.a: "It is ultimately for the best"
  Germany.223.b: "Absolutely not"
  Germany.224.t: "[FROM.GetName] Accepts our Invitiation!"
  Germany.224.d: "[FROM.GetName] has accepted our offer to join our new Union, and we are looking forward to many centuries of cooperation with them!"
- Germany.224.a: "Great!"
+ Germany.224.a: "Great"
  Germany.225.t: "[FROM.GetName] Rejects our Proposal!"
  Germany.225.d: "Those damn [FROM.GetAdjective] lunatics have decided that they are better off on their own! We are going to have to show them that this will not fly in our new European order."
  Germany.225.a: "They will Pay the Price"
@@ -1605,7 +1605,7 @@
  Germany.231.a: "Good.."
  Germany.232.t: "[USA.GetName] Snubs our Request!"
  Germany.232.d: "The [USA.GetName] has decided to completely ignore our request, with some of their politicians even mocking our request in the congress.."
- Germany.232.a: "Unfortunate.."
+ Germany.232.a: "Unfortunate"
  Germany.232.b: "Exploit the debates!"
  Germany.233.t: "Inspection Reveals Failures in the Bundeswehr"
  Germany.233.d: "After a series of inspections were started earlier this year, the data has shown that the Bundeswehr is beginning to fall behind other conventional militaries. The biggest problems that plague the Bundeswehr have been written down, and a comprehensive plan has been created for us to reform the force."
@@ -1626,7 +1626,7 @@
  Germany.237.a: "Damn"
  Germany.2343.t: "Bundeswehr Reforms Successful"
  Germany.2343.d: "We have been successful in reforming the Bundeswehr. Disaster has been averted, and our forces can feel confident in their ability to protect the borders of [GER.GetName]!"
- Germany.2343.a: "Great!"
+ Germany.2343.a: "Great"
  Germany.238.t: "Department Risks Collapse"
  Germany.238.d: "One or more of our critical departments has hit 10/50 on its status level. This means that sooner or later, if we do not increase our funding, the department will fall apart. If the department falls apart, then our democracy will be overthrown and radical political parties will be free to do as they wish."
  Germany.238.a: "We can still turn this ship around!"
@@ -1641,7 +1641,7 @@
 #
  Germany.369.t: "Important Information!"
  Germany.369.d: "With the reworked content of Germany, many new mechanics have been introduced, including but not limited to the BfV (Bundesamt für Verfassungsschutz) mechanic, Bavarian nationalism mechanic, and the East & West divide mechanic. Though the last 2 are pretty straight forward systems, players may end up being confused on the BfV system and how it works.\nWell how does it work?\n\n You can find the BfV button in the bottom right of your screen right above the Ledger, the BfV will allow you to control whether or not you want to play as radical parties. Pretty much to put it simply, if you have high funding on all 3 departments you will be a democracy with no issues, as the parties are all in check. Leaving funding at medium, will maintain a status quo. But if you have very low funding, then the department will start losing status points and will eventually fall apart, leading to a civil war (if you don't intervene). Specifically if Department 2 or 5 fall, a civil war will be under way. If Department 6 falls then there will other consequences. But once the civil war happens, you will need to win it and then you will be able to play as any of the 3 radical parties available.\n\nWe hope you enjoy,\n - The Millennium Dawn German-Rework Team."
- Germany.369.a: "Okay!"
+ Germany.369.a: "Okay"
 #
  Germany.400.t: "Our Involvement in the War on Terror"
  Germany.400.d: "We have recently agreed to help out our American friends in their war against terror. We will be able to deploy a certain amount of troops to maintain peace, and help out with smaller combat missions. But the question is, how many men do we want to put on the battlefield?"
@@ -1655,7 +1655,7 @@
  Germany.4011.a: "Good work, now back to work!"
  Germany.4021.t: "Unsuccessful Airstrike Mission"
  Germany.4021.d: "Our Airforce was unable to carry out a proper airstrike mission against several targets throughout Afghanistan. As a result of our failures, we have lost the support of many locals. Additionally, we have reports that one of our aircraft involved in the mission was shot down."
- Germany.4021.a: "Damn it!"
+ Germany.4021.a: "Damn"
  Germany.403.t: "Successful Operation"
  Germany.403.d: "Our forces successfully carried out a mission against several terrorist targets in [AFG.GetFlag] Afghanistan."
  Germany.403.a: "Good work"
@@ -1883,7 +1883,7 @@
  germany_divide.1.a: "Damn"
  germany_divide.2.t: "§H[anarchist_communism_L]§! stage protests"
  germany_divide.2.d: "Supporters of §H[anarchist_communism_L]§! have begun staging protests in several cities across the nation, and their activities have begun slowing the country down and causing damage to public works."
- germany_divide.2.a: "Damn it"
+ germany_divide.2.a: "Damn"
  germany_divide.3.t: "§H[anarchist_communism_L]§! start riots"
  germany_divide.3.d: "§H[anarchist_communism_L]§! supporters have been rioting across the nation, and they brough havoc and instability to many parts of the nation."
  germany_divide.3.a: "Oh come on!"
@@ -1946,7 +1946,7 @@
  germany_divide.19.b: "Good idea, change up somethings"
  germany_divide.20.t: "Public infrastructure collapsing in East Germany"
  germany_divide.20.d: "As a result of a lack of care, infrastructure in East Germany has begun caving in on itself, and collapsing as a result of neglect and improper care. We will have to deal with this as soon as possible!"
- germany_divide.20.a: "Damn it!"
+ germany_divide.20.a: "Damn"
  germany_divide.20.b: "Fix it by cutting major corners"
 
  #BAVARIA EVENTS
