--- a/localisation/english/MD_focus_GRE_l_english.yml
+++ b/localisation/english/MD_focus_GRE_l_english.yml
@@ -595,12 +595,12 @@
  greece.9.a: "A dark day for Greek aviation"
  greece.10.t: "[From.GetName] Asks Us for Guarantees in Exchange for Cooperation"
  greece.10.d: "[From.GetName] is asking us for support by guaranteeing their independence in exchange for closer ties with us. Should we accept?"
- greece.10.a: "Yes."
- greece.10.b: "No."
+ greece.10.a: "Yes"
+ greece.10.b: "No"
  greece.11.t: "[From.GetName] Asks Us for Guarantees in Exchange for Cooperation"
  greece.11.d: "[From.GetName] is asking us for support by guaranteeing their independence in exchange for closer ties with us. Should we accept?"
- greece.11.a: "Yes."
- greece.11.b: "No."
+ greece.11.a: "Yes"
+ greece.11.b: "No"
  greece.12.t: "Alexis Tsipras Becomes Leader of SYRIZA"
  greece.12.d: "On 10 August 2008 the left-wing SYRIZA party elected the 33-year-old Alexis Tsipras as party leader, making him one of the youngest political party leaders in Greek history."
  greece.12.a: "Congratulations"
