--- a/localisation/english/MD_focus_IRQ_l_english.yml
+++ b/localisation/english/MD_focus_IRQ_l_english.yml
@@ -656,7 +656,7 @@
  # Events
  iraqi_events.1.t: "New Year Reports"
  iraqi_events.1.d: "As the year 2000 dawns upon Iraq, the nation finds itself grappling with a host of formidable challenges that threaten its stability and progress. Iraq continues to grapple with the suffocating impact of international sanctions imposed following the Gulf War. These sanctions have severely hampered the country's ability to rebuild its infrastructure, revive its economy, and provide essential services to its citizens. The restrictions on trade and financial transactions have resulted in a stagnant economy, high unemployment rates, and widespread poverty. The scarcity of resources and limited access to vital technologies further exacerbate Iraq's struggles. Furthermore, Iraq's political isolation persists as suspicions linger among the international community regarding the government's pursuit of weapons of mass destruction and its alleged human rights abuses. This isolation hampers Iraq's ability to establish fruitful diplomatic relations, engage in mutually beneficial partnerships, and regain its rightful place in the global stage. Internally, Iraq faces deep-seated social discontent arising from the mismanagement of resources, systemic corruption, and inadequate public services. These issues have led to public frustration, deteriorating trust in the government, and a growing sense of disillusionment among the population. Addressing these grievances is crucial for fostering social cohesion and ensuring the well-being of the Iraqi people."
- iraqi_events.1.a: "Interesting."
+ iraqi_events.1.a: "Interesting"
 
  iraqi_events.2.t: "Iraq asks for our aid"
  iraqi_events.2.d: "With the aftermath of the war in Iraq and the start of a new Democratic government appointed by the West in it, it seems the odds are not too much in favor of this new-found government. Hence, they are asking for aid from their allies, which are us. So, how should we respond to their proposal for aid?"
@@ -670,16 +670,16 @@
 
  iraqi_events.4.t: "Iran Accepts"
  iraqi_events.4.d: "Soon, Iranian engineers will arrive for constructing new electricity power houses in our country! Surely, we will not forget this really good investment of the Iranians."
- iraqi_events.4.a: "Thank you!"
+ iraqi_events.4.a: "Thank you"
 
  iraqi_events.5.t: "Iran Rejects"
  iraqi_events.5.d: "It seems, they weren't that much interested at us."
- iraqi_events.5.a: "Sad."
+ iraqi_events.5.a: "Sad"
 
  iraqi_events.6.t: "Iraq needs our engineers"
  iraqi_events.6.d: "The Iraqi government has requested us to send some of our engineers to them so that they can rebuild their industries and infrastructure and achieve faster growth. Do they deserve the help of our engineers?"
- iraqi_events.6.a: "Yes."
- iraqi_events.6.b: "No."
+ iraqi_events.6.a: "Yes"
+ iraqi_events.6.b: "No"
 
  iraqi_events.7.t: "An offer from Iraq"
  iraqi_events.7.d: "Unexpectedly, it seems that we have gotten an economic offer from Iraq, which is, of course, mostly related to energy. It seems that in exchange for the construction of new power plant buildings by us in their country, they are offering us to send their"advisors" to our country for economic and industrial aid.\nThis offer does not hurt, does it?"
@@ -698,7 +698,7 @@
 
  iraqi_events.10.t: "Iran Refuses!"
  iraqi_events.10.d: "Iran has refused to partake in our economic union, weakening our economic influence across the region.."
- iraqi_events.10.a: "Damn it"
+ iraqi_events.10.a: "Damn"
 
  iraqi_events.11.t: "Iran and Iraq have asked us to join their Union"
  iraqi_events.11.d: "Earlier this morning, one of the Iraqi ambassadors have made a diplomatic transition with us, which included a representative from Iran. and it seems it was about the new rising "Union of Islamic Prosperity". Since we are a Shia country, and the fact that we are also close to the Axis of Resistance, has made both the Iraqis and the Iranians to ask us join this new Union. Surely, the benefits of this union will truly be "Prosperous" for us."
@@ -720,7 +720,7 @@
 
  iraqi_events.16.t: "Russia invests!"
  iraqi_events.16.d: "The Russian government has decided that they will allocate a certain amount of money into investing in our nation."
- iraqi_events.16.a: "Great!"
+ iraqi_events.16.a: "Great"
 
  iraqi_events.17.t: "Russians refuse to invest"
  iraqi_events.17.d: "The Russian government has deemed it unnecessary to invest in Iraq, and have thus denied our request."
@@ -799,7 +799,7 @@
 
  iraqi_events.34.t: "Losses Endured over [SAU.GetFlag] Aramco"
  iraqi_events.34.d: "Our new investments have gone south, with losses in the market being endured over the control of [SAU.GetFlag] Aramco."
- iraqi_events.34.a: "Damn it"
+ iraqi_events.34.a: "Damn"
 
  iraqi_events.35.t: "[SAU.GetFlag] Aramco is Ours"
  iraqi_events.35.d: "Today, after many months of hard work and scheming, we have been able to take total control over [SAU.GetFlag] Aramco. As a result of our high influence, we are also able to get [SAU.GetFlag] [SAU.GetLeader] to renounce his nations ownership of [SAU.GetFlag] Aramco and make an official transfer to legitimize our takeover."
@@ -807,7 +807,7 @@
 
  iraqi_events.36.t: "[SAU.GetFlag] Aramco Seizure Stalled"
  iraqi_events.36.d: "Our plans to seize [SAU.GetFlag] Aramco have been stalled, resulting in serious damage to our reputation as some high level employees at [SAU.GetFlag] Aramco have caught onto our scheme."
- iraqi_events.36.a: "Damn it"
+ iraqi_events.36.a: "Damn"
 
  iraqi_events.37.t: "Bahrain Recalls NSA Bahrain"
  iraqi_events.37.d: "Bahrain has recalled the NSA Bahrain base and removed our troops from their territory. This is probably a result of expanding Iraqi influence in the region.."
@@ -988,7 +988,7 @@
  iraq_civil_war.6.t: "Alliance with Shi'ite Militias?"
  iraq_civil_war.6.d: "Despite certain Shi'ite militias having risen up against our government, their leadership is not opposed to the idea of an alliance. Depending on how our constitution has regulated the rights of Militias, their demands may differ."
  iraq_civil_war.6.a: "Go Ahead"
- iraq_civil_war.6.b: "No!"
+ iraq_civil_war.6.b: "No"
 
  iraq_civil_war.7.t: "Shi'ite Militias Demand Constitutional Exemption"
  iraq_civil_war.7.d: "Several negotiators from the Shi'ite Militias that we have contacted have proposed that in order to forge an alliance, we are going to have to exempt them from the constitutional requirement that puts a ban on militias. This means that they will operate autonomously but will be willing to help our government in times of war. This will also give their militias heavy political influence, as we are willing to bend the constitution for them."
@@ -1151,7 +1151,7 @@
 
  iraq_md.19.t: "[FROM.GetName] Rejects Our Defensive Pact"
  iraq_md.19.d: "The [FROM.GetName] Government has rejected our defensive pact, potentially putting regional security at risk."
- iraq_md.19.a: "Damn it"
+ iraq_md.19.a: "Damn"
 
  iraq_md.20.t: "[FROM.GetName] Invites us to the FAO"
  iraq_md.20.d: "[FROM.GetName] has recently extended an invitation to their alliance dubbed as the 'FAO' or the Front Against Oppression. They seek to curb the growing influence of the west in region in favor of more fundamentalist ones."
@@ -1403,7 +1403,7 @@
 
  iraq_md.84.t: "[FROM.GetName] Has Agreed to Our Request"
  iraq_md.84.d: "[FROM.GetName] Has Agreed to Our Request, we will be joining the Axis of Resistance to fight against western imperialism all across the globe!"
- iraq_md.84.a: "Great!"
+ iraq_md.84.a: "Great"
 
  iraq_md.85.t: "[FROM.GetName] Has Refused Our Request"
  iraq_md.85.d: "[FROM.GetName] Has Refused to Our Request, and it seems that we may have to achieve our goals without the Iranians."
@@ -1415,7 +1415,7 @@
 
  iraq_md.87.t: "[IRQ.GetLeader] Orders Troops to Sack Local Markets"
  iraq_md.87.d: "[IRQ.GetLeader] has ordered his close contingent of troops to sack nearby markets, more specifically those who have been designated as suspicious by the government."
- iraq_md.87.a: "Okay.."
+ iraq_md.87.a: "Okay"
  iraq_md.87.b: "Not a Good Idea"
 
  iraq_md.88.t: "[IRQ.GetLeader] Want's to Splurge"
