--- a/localisation/english/MD_focus_NIG_l_english.yml
+++ b/localisation/english/MD_focus_NIG_l_english.yml
@@ -455,8 +455,8 @@
  nigeria_md.7.b: "We Can Not Afford This."
  nigeria_md.8.t: "Investment from Nigeria"
  nigeria_md.8.d: "Nigeria is seeking to invest in our countries infrastructure and some other vital sectors in the country. The only issue remains is do we allow Nigerian companies to gain a foothold in our delicate economies?\n"
- nigeria_md.8.a: "Of Course!"
- nigeria_md.8.b: "Never!"
+ nigeria_md.8.a: "Of Course"
+ nigeria_md.8.b: "Never"
  nigeria_md.9.t: "Invitation to the Union of Islamic States"
  nigeria_md.9.d: "Nigeria and our other brothers in arms have begun to band together to fight for our freedom against those who wish to oppose the us. The diplomat states 'we must rise up together or else we are faced with utter extinction.'\n\n Should we join our brothers in faith?\n"
  nigeria_md.9.a: "Stronger Together!"
