--- a/localisation/english/MD_focus_NOR_l_english.yml
+++ b/localisation/english/MD_focus_NOR_l_english.yml
@@ -265,7 +265,7 @@
  norway.9.b: "Actually, These Cost Too Much..."
  norway.93.t: "[FROM.GetName] Rejects Weapons Sales"
  norway.93.d: "[FROM.GetName] has stated that they are not interested in selling any of their weapons to us."
- norway.93.a: "Damn It"
+ norway.93.a: "Damn"
  norway.94.t: "Norway Would Like To Purchase Weapons"
  norway.94.d: "The Norwegian government has recently contacted us in regards to the sale of military weapons, and are willing to spend big time to get their hands on our stockpiles."
  norway.94.a: "Okay"
@@ -279,7 +279,7 @@
  norway.11.a: "Great"
  norway.12.t: "The Russian Government Rejects"
  norway.12.d: "The Russian government has rejected to the requests our diplomats set forward in the meeting that was held earlier."
- norway.12.a: "Damn It"
+ norway.12.a: "Damn"
  norway.14.t: "The LGBT"
  norway.14.d: "Our state recognizes the right to civil unions between 2 individuals, however full on marriages of homosexual individuals has not been fully legalized. We can go ahead and put an end to the debate today."
  norway.14.a: "Commit to Total Legalization"
