--- a/localisation/english/MD_focus_SMA_l_english.yml
+++ b/localisation/english/MD_focus_SMA_l_english.yml
@@ -402,7 +402,7 @@
  # Events
  SMA.1.t: "Proposal of our Bishop..."
  SMA.1.d: "Our Holy and righteous church took over in San Marino. Our Bishop from there wants to unify us as countries into one body and give our holiness the full power!"
- SMA.1.a: "Of course!"
+ SMA.1.a: "Of Course"
  SMA.1.b: "Such a silly proposal."
  SMA.2.t: "400 years of the constitution"
  SMA.2.d: "Today is the 400th anniversary of the constitution of San Marino! But should we celebrate this momentous date, or should we leave everyone to their jobs?"
@@ -428,7 +428,7 @@
  SMA.8.b: "Prohibit the merger" # No
  SMA_news.1.t: "Vatican and San Marino Unite!"
  SMA_news.1.desc: "In a monumental development that has captured the world's attention, the microstates of San Marino and Vatican City have decided to unite, forming a single country under the rule of the Pope. This groundbreaking merger brings together two sovereign entities with rich histories and distinct identities, promising a unique future for both nations!"
- SMA_news.1.a: "Interesting."
+ SMA_news.1.a: "Interesting"
  SMA_news.2.t: "Discovered Philosopher's Stone!"
  SMA_news.2.desc: "Scientists in San Marino have finally been able to discover what other scientists have been trying to do for centuries! They've discovered a reagent that allows them to turn any metal into gold!"
  SMA_news.2.a: "What?"
@@ -454,7 +454,7 @@
 
  SMA_countries.5.t: "Investment application rejected"
  SMA_countries.5.d: "Recently, we submitted a request for foreign investment. And to our great regret, our request was rejected."
- SMA_countries.5.a: "Sadly"
+ SMA_countries.5.a: "Sad"
 
  SMA_countries.6.t: "Investment application approved"
  SMA_countries.6.d: "We recently submitted an application to attract foreign investment. And fortunately, they approved our application."
