--- a/localisation/english/MD_focus_SOV_l_english.yml
+++ b/localisation/english/MD_focus_SOV_l_english.yml
@@ -1448,7 +1448,7 @@
  russia.11.t: "Russia Demands our Annexation!"
  russia.11.d: "Russia has started to show mild aggression against our country government masked behind pleasantries. We should prepare for the worst should we deny this superpower."
  russia.11.o1: "We Are One with Russia"
- russia.11.o2: "Never!"
+ russia.11.o2: "Never"
  russia.12.t1: "[From.GetName] Accepts!"
  russia.12.d1: "[From.GetName] accepts our proposal. We should quickly begin to take control over the local governments and bring stability to the region. The Abkhazian government has decided to integrate themselves and cooperate closely with our envoys to support the occupying forces."
  russia.12.t2: "[From.GetName] Accepts!"
@@ -1545,28 +1545,28 @@
  russia.38.o1: "Excellent."
  russia.39.t: "[FROM.GetName] Declines the Economic Cooperation!"
  russia.39.d: "[FROM.GetName] has sent an negative responce to our investment proposal! It stops us from continuation of this project."
- russia.39.o1: "Sad."
+ russia.39.o1: "Sad"
  russia.40.t: "Take the Sahel Confederation Under Direct Control"
  russia.40.d: "I think we should personally monitor the process."
- russia.40.o1: "No."
+ russia.40.o1: "No"
  russia.40.o2: "Go for the Sahel Confederation."
  russia.41.t: "[SOV.GetNamewithFlag] Offers Us Its Heavy Flamethrower System"
  russia.41.d: "The Russian military industry is actively developing and offers us to buy one of its newest inventions. Will we agree?"
- russia.41.o1: "Yes."
- russia.41.o2: "No."
+ russia.41.o1: "Yes"
+ russia.41.o2: "No"
  russia.44.t: "Purchase of Our Heavy Flamethrower Systems"
  russia.44.d: "[FROM.GetName] has agreed to purchase our heavy flamethrower systems"
- russia.44.a: "Good."
+ russia.44.a: "Good"
  russia.45.t: "Purchase of Our Heavy Flamethrower Systems"
  russia.45.d: "[FROM.GetName] refused to purchase our heavy flamethrower systems"
  russia.45.a: "It's sad."
  russia.46.t: "[SOV.GetNamewithFlag] Offers Us Its Tanks"
  russia.46.d: "The Russian military industry is actively developing and offers us to buy one of its newest inventions. Will we agree?"
- russia.46.o1: "Yes."
- russia.46.o2: "No."
+ russia.46.o1: "Yes"
+ russia.46.o2: "No"
  russia.47.t: "Purchase of Our Tanks"
  russia.47.d: "[FROM.GetName] has agreed to purchase our tanks"
- russia.47.a: "Good."
+ russia.47.a: "Good"
  russia.48.t: "Purchase of Our Tanks"
  russia.48.d: "[FROM.GetName] refused to purchase our tanks"
  russia.48.a: "It's sad."
@@ -2300,7 +2300,7 @@
  sov_communists.7.b: "The pre-war titles were better"
  sov_communists.8.t: "Unexpected Union"
  sov_communists.8.d: "Cooperation with the Communists was definitely not expected by anyone"
- sov_communists.8.a: "Interesting."
+ sov_communists.8.a: "Interesting"
 
  SOV_Tsaritsyn: "Tsaritsyn"
  SOV_Petrograd: "Petrograd"
@@ -2431,7 +2431,7 @@
 
  rusboloto.3.t: "Protests were handled by the police."
  rusboloto.3.d: "Protests have failed to achieve their goal."
- rusboloto.3.a: "Wonderful."
+ rusboloto.3.a: "Wonderful"
 
  sov_other.1.t: "Zhirinovsky elected as President"
  sov_other.1.d: "During recent change in Russian government Nationalistic party LDPR was elected with their leader Vladimir Zhirinovsky as new President. They announced a new political program that would radically change Russia. One of the first reforms they promise is the return of the old flag and a new course towards a conservative nationalist agenda..."
@@ -2477,7 +2477,7 @@
 
  sov_other.10.t: "Russia helps us in wiping out corruption!"
  sov_other.10.d: "Recently, because of the new Russian-Ukrainian anti-corruption agreement, Russia helped us to arrest and seize property of corrupt oligrach, drastically decreasing corruption level in our country!"
- sov_other.10.a: "Thanks!"
+ sov_other.10.a: "Thanks"
 
  SOV_undo_putin_TT: "We will start the process of undoing the lawless system of government that was made before our government!"
 
@@ -2499,11 +2499,11 @@
  sov_other.13.t: "Russian proposal..."
  sov_other.13.d: "New Russian democratic government proposes mutual linguistic programs on recognising Russian language as another governmental one in Ukraine, while Russia will assist in teaching Ukrainian language to ethnic Ukrainians in Russia. They sentiment is to ensure lack of conflict between two nation, mutual friendship and cultural exchange."
  sov_other.13.a: "Wonderful Idea!"
- sov_other.13.b: "Sorry, no."
+ sov_other.13.b: "Sorry, no"
 
  sov_other.14.t: "Ukraine accepted our proposal!"
  sov_other.14.d: "Ukraine accepted our proposal!"
- sov_other.14.a: "Wonderful!"
+ sov_other.14.a: "Wonderful"
 
  sov_other.15.t: "Ukraine denied our proposal!"
  sov_other.15.d: "Ukraine denied our proposal!"
@@ -2584,11 +2584,11 @@
 
  sov_other.17.t: "Russia Supports Armenia!"
  sov_other.17.d: "Russia recently delcared open support for Armenia and the cause of Armenia to reclaim their lands."
- sov_other.17.a: "Interesting."
+ sov_other.17.a: "Interesting"
 
  sov_other.18.t: "Russia decided to maintain status quo."
  sov_other.18.d: "Russia recently decided to not show any open support for Armenia and the cause of Armenia to reclaim their lands."
- sov_other.18.a: "Interesting."
+ sov_other.18.a: "Interesting"
 
  SOV_FSB_expansion: "Expand FSB"
  SOV_FSB_expansion_desc: "FSB is our security agency and we should not have an outdated security facilities!"
@@ -2645,11 +2645,11 @@
 
  sov_nemtsov.1.t: "Boris Nemtsov is killed!"
  sov_nemtsov.1.d: "Boris Nemtsov was shot dead on Moscow time on February 27, 2015 in Moscow on the Bolshoi Moskvoretsky Bridge, when he was heading towards the house on Malaya Ordynka with Ukrainian model Anna Duritskaya after dinner at GUM. According to investigators, Nemtsov was under surveillance, and the attackers knew the route. The killer fired several shots in the back of Boris Nemtsov, after which he fled in a white car that drove up (initially, it was erroneously assumed that the killers fired from a passing car). Nemtsov was shot six times from the back, four bullets hit his head, heart, liver and stomach. Nemtsov died on the spot from his wounds. The criminals fled in a car. Plan "Interception" was announced. The Moscow District Military Court issued a verdict in the case of the murder of Nemtsov. Zaur Dadaev was sentenced to 20 years in prison, his accomplices Anzor Gubashev - to 19 years in prison, Shadid Gubashev - to 16, Temirlan Eskerkhanov - to 14, Khamzat Bakhaev - to 11 years. Each of them was fined 100 thousand rubles, all convicts must serve their sentences in strict regime colonies. The court did not name the direct customer of the murder."
- sov_nemtsov.1.a: "Interesting."
+ sov_nemtsov.1.a: "Interesting"
 
  sov_girkin.1.t: "Capture of Slavyansk!"
  sov_girkin.1.d: "Until a certain moment, the confrontation in the Donbass did not have the character of an armed one. Although at that time the Donetsk Euromaidan activist Dmitry Chernyavsky had already been killed, and the so-called Donetsk Peoples Republic had been proclaimed, the separatists had no real power. The personnel of the police and the SBU waited, there was no mass support of the locals. Quite a lot of people were really going to watch regular rallies, but there were very few people in the seized premises of the regional administration in Donetsk: they were city madmen, criminal and semi-criminal persons, pro-Russian activists, visiting Russian outcasts from the border regions. Of the entire cohort of leaders of the then DPR, only Alexander Khryakov and Andrey Purgin from the public organization Donetsk Republic, founded back in the mid-2000s, were relatively well-known. Almost everyone in Donetsk was firmly convinced that the home-grown separatists would rally for several days and disperse. However, the situation escalated sharply. Moreover, where they were not expected - in Slavyansk (population - 120 thousand at that time) in the north of the region, a detachment of armed people of 52 people entered. First of all, they seized the city police department almost without resistance. The attackers threw explosive packages at the building, then with the help of a car they tore off the bars from the windows and went inside."
- sov_girkin.1.a: "Interesting."
+ sov_girkin.1.a: "Interesting"
  SOV_support_nov_idea: "Russian Support"
  SOV_supportlnrdnr_rus: "Support LPR and DPR"
  SOV_supportlnrdnr_rus_desc: "It's time to support the republics of Donbass!"
@@ -3631,7 +3631,7 @@
 
  Sov_warsaw_pact.10.t: "Popularization of Ostalgia in Germany"
  Sov_warsaw_pact.10.d: "Recently, a movement called "Ostalgia" has been particularly active in eastern Germany. Although it has existed before, this time it is particularly strong. International experts are extremely concerned about the situation in Germany and believe that it is a direct consequence of covert manipulation by the Warsaw Pact foreign intelligence service"
- Sov_warsaw_pact.10.a: "Interesting..."
+ Sov_warsaw_pact.10.a: "Interesting"
 
  Sov_warsaw_pact.11.t: "Strange activity in eastern Germany"
  Sov_warsaw_pact.11.d: "Recently we have begun to see more frequent traces of underground communist activity in eastern Germany. Our intelligence has found that the military is beginning to sabotage service, and scientists are slowing down the pace of our science. We have determined that all of this is the result of outside support from the ussr. Our intelligence will receive additional funding from the government to counter this scourge"
