--- a/localisation/english/MD_focus_SUB_l_english.yml
+++ b/localisation/english/MD_focus_SUB_l_english.yml
@@ -742,7 +742,7 @@
  subject_rus.1.a: "Nice"
  subject_rus.2.t: "Russian Military Doctrine"
  subject_rus.2.d: "All subjects of the Federation have adopted the military doctrine of Russia"
- subject_rus.2.a: "Ok"
+ subject_rus.2.a: "Okay"
 
  subject_rus.3.t: "Federation Council: Voting"
  subject_rus.3.d: "On the agenda of the Federation Council today is the law put forward by the [ROOT.GetNameWithFlag] government on allowing regional troops to participate in the external military doctrine of Russia."
@@ -753,24 +753,24 @@
  subject_rus.4.a: "Voting is over"
  subject_rus.5.t: "[BSH.GetNameWithFlag] Nuclear Power Plant"
  subject_rus.5.d: "Bashkir NPP is a Soviet project abandoned in the last century. Now [BSH.GetNameWithFlag] is asking us to revive this project and bring it to an end, will we agree?"
- subject_rus.5.a: "Of course"
+ subject_rus.5.a: "Of Course"
  subject_rus.5.b: "No"
  subject_rus.6.t: "[BSH.GetNameWithFlag] Nuclear Power Plant"
  subject_rus.6.d: "[SOV.GetNameWithFlag] has agreed to revive and complete the Bashkir NPP on our territory"
  subject_rus.6.a: "Gorgeous!"
  subject_rus.7.t: "[BSH.GetNameWithFlag] Nuclear Power Plant"
  subject_rus.7.d: "The [SOV.GetFlag]Russian government believes that the construction of the Bashkir NPP is a project that can be postponed for later, so they refused"
- subject_rus.7.a: "Sadly"
+ subject_rus.7.a: "Sad"
  subject_rus.8.t: "[BSH.GetNameWithFlag] Requests The Creation of Idel-Ural"
  subject_rus.8.d: "The [BSH.GetFlag]Bashkir government has submitted its bill on the unification of Tatarstan and Bashkiria into a single entity - Idel Ural. Are we ready for such a drastic change of borders within the country?"
- subject_rus.8.a: "Of course"
+ subject_rus.8.a: "Of Course"
  subject_rus.8.b: "No"
  subject_rus.9.t: "[BSH.GetNameWithFlag] Requests The Creation of Idel-Ural"
  subject_rus.9.d: "The [SOV.GetFlag]Russian government has agreed to adopt our bill on the unification of our republic with Tatarstan"
  subject_rus.9.a: "Gorgeous!"
  subject_rus.10.t: "[BSH.GetNameWithFlag] Requests The Creation of Idel-Ural"
  subject_rus.10.d: "The [SOV.GetFlag]Russian government rejected our bill on the creation of the Idel Ural Region"
- subject_rus.10.a: "Sadly"
+ subject_rus.10.a: "Sad"
  subject_rus.13.t: "[FROM.GetNameWithFlag] Requests Subsidies"
  subject_rus.13.d: "[FROM.GetNameWithFlag] government requests subsidies from us for their budget, are we ready to allocate them?"
  subject_rus.13.a: "Yes"
@@ -787,14 +787,14 @@
  subject_rus.16.b: "No"
  subject_rus.17.t: "[BSH.GetNameWithFlag] Requests The Creation of Idel-Ural"
  subject_rus.17.d: "[BSH.GetNameWithFlag] government has submitted its bill on the unification of Tatarstan and Bashkiria into a single entity - Idel Ural. Are we ready for such a drastic change of borders within the country?"
- subject_rus.17.a: "Of course"
+ subject_rus.17.a: "Of Course"
  subject_rus.17.b: "No"
  subject_rus.18.t: "[BSH.GetNameWithFlag] Requests The Creation of Idel-Ural"
  subject_rus.18.d: "The [SOV.GetFlag]Russian government has agreed to adopt our bill on the unification of our republic with Tatarstan"
  subject_rus.18.a: "Gorgeous!"
  subject_rus.19.t: "[TAT.GetNameWithFlag] Requests The Creation of Idel-Ural"
  subject_rus.19.d: "The [SOV.GetFlag]Russian government rejected our bill on the creation of the Idel Ural Region"
- subject_rus.19.a: "Sadly"
+ subject_rus.19.a: "Sad"
  subject_rus.22.t: "Tatneft Offers Us Oil Investments"
  subject_rus.22.d: "[TAT.GetFlag]Tatarstan's Tatneft campaign offers investments in the oil sector."
  subject_rus.22.a: "We accept investments"
@@ -828,11 +828,11 @@
  subject_rus.29.a: "Sad"
  subject_rus.32.t: "[CHE.GetNameWithFlag] Requests The Creation of Chechen-Ingush Republic"
  subject_rus.32.d: "[CHE.GetNameWithFlag] government has submitted its bill on the unification of Chechnya and Ingushetia into a single entity - Chechen-Ingush Republic. Are we ready for such a drastic change of borders within the country?"
- subject_rus.32.a: "Of course"
+ subject_rus.32.a: "Of Course"
  subject_rus.32.b: "No"
  subject_rus.33.t: "[CHE.GetNameWithFlag] Requests The Creation of Chechen-Ingush Republic"
  subject_rus.33.d: "The [SOV.GetFlag]Russian government rejected our bill on the creation of the Chechen-Ingush Republic"
- subject_rus.33.a: "Sadly"
+ subject_rus.33.a: "Sad"
  subject_rus.34.t: "[CHE.GetNameWithFlag] Requests The Creation of Chechen-Ingush Republic"
  subject_rus.34.d: "The [SOV.GetFlag]Russian government has agreed to adopt our bill on the unification of our republic with Ingushetia"
  subject_rus.34.a: "Gorgeous!"
@@ -844,7 +844,7 @@
  subject_rus.36.a: "Good"
  subject_rus.37.t: "Subject of the Federation"
  subject_rus.37.d: "We are not Subject Federation"
- subject_rus.37.a: "Ok"
+ subject_rus.37.a: "Okay"
 
  subject_rus.38.t: "[FROM.GetNameWithFlag] Requests Construction Of a Factory"
  subject_rus.38.d: "[FROM.GetNameWithFlag] government requests the construction of a factory on its territory, due to the inability to do it on its own"
@@ -882,14 +882,14 @@
  subject_rus.47.a: "Sad"
  subject_rus.48.t: "[BSH.GetNameWithFlag] Requests The Creation of Volga SSR"
  subject_rus.48.d: "The [BSH.GetFlag]Bashkir government has submitted its bill on the unification of Tatarstan and Bashkiria into a single entity - Volga SSR. Are we ready for such a drastic change of borders within the country?"
- subject_rus.48.a: "Of course"
+ subject_rus.48.a: "Of Course"
  subject_rus.48.b: "No"
  subject_rus.49.t: "[BSH.GetNameWithFlag] Requests The Creation of Volga SSR"
  subject_rus.49.d: "The [SOV.GetFlag]Russian government has agreed to adopt our bill on the unification of our republic with Tatarstan"
  subject_rus.49.a: "Gorgeous!"
  subject_rus.50.t: "[BSH.GetNameWithFlag] Requests The Creation of Volga SSR"
  subject_rus.50.d: "The [SOV.GetFlag]Russian government rejected our bill on the creation of the Volga SSR"
- subject_rus.50.a: "Sadly"
+ subject_rus.50.a: "Sad"
 
  subject_rus.51.t: "[TAT.GetNameWithFlag] Offers Us Cooperation"
  subject_rus.51.d: "[TAT.GetNameWithFlag] offers us to conclude a trade agreement that involves cooperation with their agro-industrial complex. Will we agree?"
@@ -2201,7 +2201,7 @@
 
  chechnya.25.t: "Meeting With Bin Laden"
  chechnya.25.d: "We arranged a meeting with Bin Laden and he promised us support"
- chechnya.25.a: "Ok"
+ chechnya.25.a: "Okay"
 
  chechnya.26.t: "The Uprising in Silesia"
  chechnya.26.d: "Head of Chechnya proposed to hold a "referendum on independence" in Silesia. This will require serious financial costs and time from us, perhaps even we will not be able to achieve success, due to the opposition of the Polish government. Will we agree ?"
