--- a/localisation/english/MD_focus_UAR_l_english.yml
+++ b/localisation/english/MD_focus_UAR_l_english.yml
@@ -45,8 +45,8 @@
  #Events
  UAR.1.t: "An Invitation To [FROM.GetNameDef]"
  UAR.1.d: "[FROM.GetNameDef] has invited us to join their Arab union. While nominally part of their union, we would still be able to operate quite independently as a nation."
- UAR.1.a: "Of course!"
- UAR.1.b: "No thanks"
+ UAR.1.a: "Of Course"
+ UAR.1.b: "No, thanks"
  UAR.2.t: "[FROM.GetNameDef] Joins [ROOT.GetNameDef]"
  UAR.2.d: "[FROM.GetNameDef] has accepted our invitation to join our union."
  UAR.2.a: "Together towards a better future"
