--- a/localisation/english/MD_missiles_l_english.yml
+++ b/localisation/english/MD_missiles_l_english.yml
@@ -495,7 +495,7 @@
 
  nukes.4.t: "[FROM.GetAdjective] Nuclear Test"
  nukes.4.d: "[FROM.GetName] has tested a nuclear warhead."
- nukes.4.a: "Okay!"
+ nukes.4.a: "Okay"
  nukes.4.b: "Don't inform me on nuclear tests again!"
 
  nukes.5.t: "Set Missiles on alert"
@@ -504,11 +504,11 @@
 
  nukes.6.t: "[FROM.GetName] sets nuclear forces on alert"
  nukes.6.d: "[FROM.GetName] has set its nuclear forces on alert. The [FROM.GetAdjective] missiles are now targeted at the strategic targets of its enemies and the nuclear warheads are armed."
- nukes.6.a: "Okay!"
+ nukes.6.a: "Okay"
 
  nukes.7.t: "[FROM.GetName] sets nuclear forces on alert"
  nukes.7.d: "[FROM.GetName] has set its nuclear forces on alert. The [FROM.GetAdjective] missiles are now targeted at the strategic targets of its enemies and the nuclear warheads are armed."
- nukes.7.a: "Okay!"
+ nukes.7.a: "Okay"
 
 #########################
 ### MISSILE MAP MODES ###
