--- a/localisation/english/MD_War_on_terror_content_l_english.yml
+++ b/localisation/english/MD_War_on_terror_content_l_english.yml
@@ -132,7 +132,7 @@
  wot.23.b: "We will not allow the US compromise our sovereignty!"
  wot.24.t: "[FROM.GetName] Agrees to Operation"
  wot.24.d: "[FROM.GetName] has given our special forces permission to enter their country and conduct a raid against bin Laden's hideout. We should get results of the operation in a few days."
- wot.24.a: "Great!"
+ wot.24.a: "Great"
  wot.25.t: "[FROM.GetName] Rejects Our Request!"
  wot.25.d: "After many attempts to gain [FROM.GetName]'s permission to conduct an on the grounds search for bin Laden, [FROM.GetLeader] has sent back a simple response; "No". Some are calling for harsh punishments for [FROM.GetName] for blatantly ignoring our call to aid us in the war on terror, we could let it slide however, as unpopular as it may be at home..."
  wot.25.a: "I suppose their sovereignty should be respected."
