--- a/localisation/english/MD_focus_African_Union_l_english.yml
+++ b/localisation/english/MD_focus_African_Union_l_english.yml
@@ -224,8 +224,8 @@
  AfricanUnionRandomEvents.3.b: "We'd rather keep our money"
  AfricanUnionRandomEvents.4.t: "[FROM.GetNameDef] Wants To Invest In Us"
  AfricanUnionRandomEvents.4.d: "The [FROM.GetAdjective] government has worked together with the African Investment Bank to prepare a small investment package to help our country. Should we accept their offer?."
- AfricanUnionRandomEvents.4.a: "Of course!"
- AfricanUnionRandomEvents.4.b: "No thanks"
+ AfricanUnionRandomEvents.4.a: "Of Course"
+ AfricanUnionRandomEvents.4.b: "No, thanks"
  AfricanUnionRandomEvents.5.t: "AMF Helps With Our Debt"
  AfricanUnionRandomEvents.5.d: "The African Monetary Fund has sent us an aid package to help us with our ever increasing debt. The money comes from multiple other member states of the African Union, with one large donor being clearly present."
  AfricanUnionRandomEvents.5.a: "A surprise to be sure, but a welcome one"
@@ -240,13 +240,13 @@
  AfricanUnionRandomEvents.7.b: "We don't need help"
  AfricanUnionRandomEvents.8.t: "[FROM.GetNameDef] Accepts Our Investment"
  AfricanUnionRandomEvents.8.d: "The [FROM.GetAdjective] government has accepted our offer to invest in their country with the help of the African Investment Bank."
- AfricanUnionRandomEvents.8.a: "Great!"
+ AfricanUnionRandomEvents.8.a: "Great"
  AfricanUnionRandomEvents.9.t: "[FROM.GetNameDef] Rejected Our Investment"
  AfricanUnionRandomEvents.9.d: "The [FROM.GetAdjective] government has rejected our offer to invest in their country with the help of the African Investment Bank."
  AfricanUnionRandomEvents.9.a: "It's their loss!"
  AfricanUnionRandomEvents.10.t: "[FROM.GetNameDef] Accepts Our Offer To Pay Debt"
  AfricanUnionRandomEvents.10.d: "The [FROM.GetAdjective] government has accepted our offer to pay off some of their debt."
- AfricanUnionRandomEvents.10.a: "Good!"
+ AfricanUnionRandomEvents.10.a: "Good"
  AfricanUnionRandomEvents.11.t: "[FROM.GetNameDef] Rejects Our Offer To Pay Debt"
  AfricanUnionRandomEvents.11.d: "The [FROM.GetAdjective] government has rejected our offer to pay off some of their debt."
  AfricanUnionRandomEvents.11.a: "It's their loss!"
