--- a/localisation/english/MD_focus_CUB_l_english.yml
+++ b/localisation/english/MD_focus_CUB_l_english.yml
@@ -100,7 +100,7 @@
  cuba_news.30: "Cuba took back Guantanamo"
  cuba_news.30.t: "Cuba took back Guantanamo"
  cuba_news.30.d: "The American delegation has agreed to bring the port of Guantanamo under Cuban control"
- cuba_news.30.a: "Interesting.."
+ cuba_news.30.a: "Interesting"
  cuba.26: "They agreed"
  cuba.26.t: "USA accept our offer!"
  cuba.26.d: "The American delegation has agreed, Guantanamo is ours again!"
@@ -108,11 +108,11 @@
  cuba.18: "Venezuela agreed"
  cuba.18.t: "Venezuela has accepted our offer"
  cuba.18.d: "The Venezuelan Government has announced its acceptance of our proposal to create the ALBA alliance"
- cuba.18.a: "Great!"
+ cuba.18.a: "Great"
  cuba.19: "Venezuela did not agree"
  cuba.19.t: "Venezuela did not agree"
  cuba.19.d: "They rejected our offer, in their opinion, it is not profitable for them"
- cuba.19.a: "Sad."
+ cuba.19.a: "Sad"
  cuba_news.24: "Cuba has become an observer country at the EAEU"
  cuba_news.24.t: "Cuba has become an observer country at the EAEU"
  cuba_news.24.d: "The EAEU countries approved the granting of observer status to Cuba at the EAEU"
@@ -129,11 +129,11 @@
  cuba.72.t: "Cuba asks for protection "
  cuba.72.d: "The Cuban government is asking us to place our bases on their island. In their opinion, there is a danger to their state from the United States. Should we agree?"
  cuba.72.a: "Let`s Protect Them."
- cuba.72.b: "No."
+ cuba.72.b: "No"
  cuba.21: "ALBA projects are successful"
  cuba.21.t: "ALBA projects are successful"
  cuba.21.d: "With the help of ALBA projects, we were able to increase our influence in other countries, save our economy, achieve energy independence and develop trade with other countries and alliances"
- cuba.21.a: "Great!"
+ cuba.21.a: "Great"
  cuba.22: "ALBA's projects are not successful"
  cuba.22.t: "ALBA's projects are not successful"
  cuba.22.d: "Unfortunately, the ALBA projects did not give the result we wanted, our economy collapsed, and the money invested in these projects was lost..."
@@ -181,7 +181,7 @@
  cuba.41: "The USA has accepted our offer"
  cuba.41.t: "The USA has accepted our offer"
  cuba.41.d: "The U.S. has accepted our offer. As of today, Puerto Rico has become an independent State."
- cuba.41.a: "Great!"
+ cuba.41.a: "Great"
  cuba.42: "The U.S. is rejecting our offer"
  cuba.42.t: "The U.S. is rejecting our offer"
  cuba.42.d: "They consider the proposal boorish and will not give independence to the Puerto Rico."
@@ -207,7 +207,7 @@
  cuba.47: "The USA will protect us!"
  cuba.47.t: "The USA will protect us!"
  cuba.47.d: "Our freedom will be save"
- cuba.47.a: "Yes!"
+ cuba.47.a: "Yes"
  cuba.48: "The US will not protect us"
  cuba.48.t: "The US will not protect us"
  cuba.48.d: "Our freedom is in danger"
@@ -239,11 +239,11 @@
  cuba.52.a: ""
  cuba.53.t: "A Civil War Broke Out with Cuban support"
  cuba.53.d: "After capturing a number of rebels, they told us that they had ties to the Cuban government and had also received ideological training on the island."
- cuba.53.a: "Damn it."
+ cuba.53.a: "Damn"
  cuba.54.t: "Cuba sent us an ultimatum."
  cuba.54.d: "The Cuban government demands our obedience. If we refuse, Cuban troops will be brought into our territory"
  cuba.54.b: "We're gonna have to take"
- cuba.54.a: "Never!"
+ cuba.54.a: "Never"
  cuba.55.t: "They refused"
  cuba.55.d: "They rejected our offer and began pulling their troops to the site of potential hostilities"
  cuba.55.a: "Let's crush them"
@@ -259,10 +259,10 @@
  cuba.65.a: "All right"
  cuba.73.t: "Russia will protect us"
  cuba.73.d: "Russia will protect us. The first echelons of equipment have already left for our island."
- cuba.73.a: "Great."
+ cuba.73.a: "Great"
  cuba.74.t: "Russia don't protect us"
  cuba.74.d: "The Russian side flatly refused to defend us. We will be left alone..."
- cuba.74.a: "Sad."
+ cuba.74.a: "Sad"
  #traits
  new_cuban: "New Cuban Leader"
  #decisions
@@ -1121,11 +1121,11 @@
  cuba_news.62.a: "Interesting"
 cuba.66.t: "Cuba requests the lifting of the blockade"
 cuba.66.d: "The Cuban government has requested that the embargo be lifted due to improved U.S.-Cuban relations and trade between the two nations."
-cuba.66.a: "Okay."
-cuba.66.b: "No."
+cuba.66.a: "Okay"
+cuba.66.b: "No"
 cuba.67.t: "USA has lifted the blockade"
 cuba.67.d: "Finally, our island can live comfortably."
-cuba.67.a: "Great!"
+cuba.67.a: "Great"
 cuba.68.t: "USA refused"
 cuba.68.d: "The blockade continues..."
 cuba.68.a: "Oh..."
