--- a/localisation/english/MD_focus_DPR_LPR_HPR_OPR_l_english.yml
+++ b/localisation/english/MD_focus_DPR_LPR_HPR_OPR_l_english.yml
@@ -230,11 +230,11 @@
  ##########Events##########
  dpr.4.t: "[FROM.GetName] Joining Russia"
  dpr.4.d: "Finally, [FROM.GetNamewithFlag] is returning home. Now they will be part of a great country, sacrificing our autonomy, but did we need it?."
- dpr.4.a: "Finally!."
- dpr.4.b: "No."
+ dpr.4.a: "Finally"
+ dpr.4.b: "No"
  dpr.5.t: "Novorossiya Was Created"
  dpr.5.d: "Donetsk and Lugansk republics signed a document on the creation of Novorossiya today.It seems that things in the south-east of Ukraine are developing rapidly and rapidly."
- dpr.5.a: "Interesting."
+ dpr.5.a: "Interesting"
  dpr.6.t: ""
  dpr.6.d: ""
  dpr.6.a: ""
@@ -319,11 +319,11 @@
  opr.1.t: "[FROM.GetName] Joining Russia"
  opr.1.d: "Referendum on joining Russia was held in [FROM.GetName], where the majority voted in favor. Are we ready to accept them into our country? or let's leave it to fight for independence ourselves."
  opr.1.a: "Welcome home!."
- opr.1.b: "No."
+ opr.1.b: "No"
  opr.2.t: "[FROM.GetName] Joining Transnistria"
  opr.2.d: "Referendum on joining Transnistria was held in [FROM.GetName], where the majority voted in favor. Are we ready to accept them into our country? or let's leave it to fight for independence ourselves."
  opr.2.a: "Welcome home!."
- opr.2.b: "No."
+ opr.2.b: "No"
 
  ##########KHARKIV CONTENT##########
  ##########Focuses##########
@@ -417,7 +417,7 @@
  hpr.1.t: "[FROM.GetName] Joining Russia"
  hpr.1.d: "Referendum on joining Russia was held in [FROM.GetName], where the majority voted in favor. Are we ready to accept them into our country? or let's leave it to fight for independence ourselves."
  hpr.1.a: "Welcome home!."
- hpr.1.b: "No."
+ hpr.1.b: "No"
 
  ##########LUGANSK CONTENT##########
  ##########Focuses##########
@@ -570,7 +570,7 @@
  ##########Events##########
  lpr.1.t: "Joining Russia"
  lpr.1.d: "Finally, Donbass is returning home. Now we will be part of a great country, sacrificing our autonomy, but did we need it?."
- lpr.1.a: "Finally!."
+ lpr.1.a: "Finally"
  lpr.2.t: "The Cossacks Rebelled in Stakhanov"
  lpr.2.d: "The Cossack units announced that they officially declare themselves an independent republic from us and will conduct military operations against us and against other enemies"
  lpr.2.a: "They're crazy"
