--- a/localisation/english/MD_focus_GEO_l_english.yml
+++ b/localisation/english/MD_focus_GEO_l_english.yml
@@ -436,12 +436,12 @@
  
  georg.3.t: "Georgia asks for cooperation agreement."
  georg.3.d: "Georgia asks us not to raise the issue of Javakhk, in exchange for mutual cooperation in various fields and a comprehensive friendship treaty. How will we answer them?"
- georg.3.a: "Of course!"
- georg.3.b: "Sorry, no."
+ georg.3.a: "Of Course"
+ georg.3.b: "Sorry, no"
  
  georg.4.t: "Armenia agrees!"
  georg.4.d: "Armenia agreed to the pact."
- georg.4.a: "Wonderful!"
+ georg.4.a: "Wonderful"
  
  georg.5.t: "Armenia denied!"
  georg.5.d: "Armenia denied our pact proposal."
@@ -471,7 +471,7 @@
 
  georg_revol.1.t: "Rose Revolution in Georgia!"
  georg_revol.1.d: "The era of the gray fox in Georgia is over. The peaceful Rose Revolution dismissed Eduard Shevardnadze. The legendary cunning and art of intrigue betrayed him. Shevardnadze could have saved his country from shock and himself from humiliation if he had retired long ago. Georgia would only benefit from this. In recent years, the 75-year-old president did not solve the country's problems but put them on the back burner. Georgia's resources were spent solely to maintain the power of Shevardnadze. Shevardnadze deceived his people. He allowed or even organized electoral fraud himself. It was this lie that led to his resignation. He saved the country from bloodshed, and this is his merit. However, the authority of the state power in Georgia has yet to be undermined. In addition, there is no answer to the main question: what will be the country's future after Shevardnadze?"
- georg_revol.1.a: "We have no choice than to accept..."
+ georg_revol.1.a: "We Have No Choice"
 
  georg_revol.2.t: "Protests in Georgia"
 
@@ -512,7 +512,7 @@
  GEO_Zhvania: "Zurab Zhvania"
  georg_revol.7.t: "Zhvania is Killed!"
  georg_revol.7.d: "The prime minister's body was found in his friend's apartment. Moreover, his friend was also found dead. According to the minister, last night Z. Zhvania came to visit his friend, the deputy governor of one of the regions of Georgia. After a while, the Prime Minister's security became worried because he did not return calls. At 4:30 local time, the guards broke the window and found the bodies of Z. Zhvania and his friend. According to the preliminary version voiced by V. Merabishvili, there was an accident - death was the result of gas poisoning. However, David Morchiladze, general director of the Tbilisi gas distribution company JSC Tbilgaz, told Rustavi 2 television after inspecting the apartment that there was no natural gas leak. According to him, a gas heater was installed in the apartment. And, in all likelihood, for some time the product of incomplete combustion of gas accumulated in the apartment, which could cause poisoning. In addition, according to Ekho Moskvy, now all approaches to the entrance of the house where Z. Zhvania died are cordoned off by the police. Journalists are also not allowed to enter the republican hospital where his body was sent. As the hospital doctor told the media representatives, they will not speak to the press until the examination is completed. "We were informed that the President ordered not to communicate with journalists," he said. An emergency meeting of the government has already been held in Tbilisi, convened on the occasion of the death of Z. Zhvania. President of Georgia Mikheil Saakashvili addressed the meeting. According to him, Georgia has lost a great patriot, and M. Saakashvili himself - his closest friend, most reliable adviser and comrade-in-arms. The President called on the government to be firm, resilient and united. In addition, M. Saakashvili expressed condolences to the families of Z. Zhvania and Raul Yusupov, who died with him. The meeting participants honored the memory of the dead with a minute of silence."
- georg_revol.7.a: "Good."
+ georg_revol.7.a: "Good"
  GEO_stalin_legacy: "Legacy of Stalin"
  GEO_stalin_legacy_desc: "The great Stalin, left his mark on the world, we must continue his great legacy"
 
@@ -550,13 +550,13 @@
 
  georg_war2008.3.t: "Ukrainian Volunteers in Georgia"
  georg_war2008.3.d: "Many Ukrainian volunteers from the Army and military veterans from the UNA-UNSO Organization decided to respond to the call for help from Georgia and joined the Georgian Armed Forces, creating volunteer battalions."
- georg_war2008.3.a: "Interesting."
- georg_war2008.3.b: "Wonderful."
+ georg_war2008.3.a: "Interesting"
+ georg_war2008.3.b: "Wonderful"
 
  georg_war2008.4.t: "Chechen Volunteers in Georgia."
  georg_war2008.4.d: "Many Chechen fighters of free Ichkeria decided to join the side of Georgia and create a nation. battalions in the Georgian army."
  georg_war2008.4.a: "Ugh, traitors."
- georg_war2008.4.b: "Wonderful."
+ georg_war2008.4.b: "Wonderful"
 
  GEO_pmc_help: "Help from PMC's"
 
@@ -590,11 +590,11 @@
  georg.21.t: "Georgia Wants investments"
  georg.21.d: "Georgia wants investments from us. Should we accept?"
  georg.21.a: "Of course, Gogi!"
- georg.21.b: "No."
+ georg.21.b: "No"
 
  georgia_news.1.t: "Georgia recognised South Ossetia and Abkhazia!"
  georgia_news.1.d: "In view of the new policy pursued by Georgia, Georgia has decided to recognize Ossetia and Abkhazia within the framework of bilateral cooperation. Does this mean peace for Georgia and the absence of future conflicts?"
- georgia_news.1.o1: "Interesting."
+ georgia_news.1.o1: "Interesting"
 
  GEO_lose_war_2008_TT: "§YWe will have to face the consequences of the failed war!§!"
  GEO_win_war_2008_TT: "§YWe will have to decide what to do next!§!"
@@ -892,7 +892,7 @@
  GEO_gas_postavka: "Gas Problems"
  georg.26.t: "Georgia asks for Guarantees"
  georg.26.d: "Georgia wants our military to protect Georgia."
- georg.26.a: "Of Course!"
+ georg.26.a: "Of Course"
  georg.26.b: "Sorry, no"
  GEO_dop_programms_idea: "Additional programs for Georgia"
  GEO_geo_railway: "Repair Railways"
@@ -1012,7 +1012,7 @@
  
  geo_misc.4.t: "Russia Denies"
  geo_misc.4.d: "Russia will not sign a pact with us."
- geo_misc.4.a: "Sad."
+ geo_misc.4.a: "Sad"
  
  geo_misc.5.t: "Georgia proposes non-aggression pact"
  geo_misc.5.d: "Georgia wants to achieve strong peace in the region by not having a pact signed by both of our countries."
@@ -1022,11 +1022,11 @@
  
  geo_misc.6.t: "Ossetia Denies"
  geo_misc.6.d: "Ossetia will not sign a pact with us."
- geo_misc.6.a: "Sad."
+ geo_misc.6.a: "Sad"
  
  geo_misc.7.t: "Abkhazia Denies"
  geo_misc.7.d: "Abkhazia will not sign a pact with us."
- geo_misc.7.a: "Sad."
+ geo_misc.7.a: "Sad"
  
  geo_misc.8.t: "Georgia suggests we join ZSFSR"
  geo_misc.8.d: "Georgian communists want to build a communist transcaucasia under their leadership. They want us to integrate into their union as a puppet state. "
