--- a/localisation/english/MD_focus_SPR_l_english.yml
+++ b/localisation/english/MD_focus_SPR_l_english.yml
@@ -1145,7 +1145,7 @@ l_english:
  # Spin Declares the Union
  spain.61.t: "[FROM.GetName] Declares a New Iberian Union"
  spain.61.d: "Spain has declared themselves the new seat of Iberia and as a response has declared they are now [FROM.GetName]. Iberia is now theirs to claim as the crown is preparing to bring claims back up from decades ago."
- spain.61.a: "An Interesting Development"
+ spain.61.a: "Interesting Development"
  # Demand the Portuguese Throne
  spain.62.t: "[FROM.GetName] Demands Our Throne"
  spain.62.d: "[FROM.GetName] has demanded our throne. They have presented us with the ultimatum to either cede the throne or perish. How should we proceed?"
@@ -1461,7 +1461,7 @@ l_english:
  # Metropol Parasol Project Complete!
  spain.247.t: "Metropol Parasol Project Completed"
  spain.247.d: "The Metropol Parasol Project, now called Las Setas, has finally been completed. It is a sight to behold as the final ribbon is cut, allowing the people of Spain entrance for the first time since its conception. It is truly a magnificent sight."
- spain.247.a: "Great!"
+ spain.247.a: "Great"
  # 2001 Moroccan Fishery Deals
  spain.248.t: "The Moroccan Fishing Deals"
  spain.248.d: "Today [SPR.GetLeader] and [MOR.GetLeader] have begun to finalize a deal about the fishing zones outside Morrocco. The deal presented is much more in favor of the Moroccan delegation. However, this is the last deal they are willing to negotiate. It dictates that Spain will lessen the number of fishing vessels that sail into Morocco's EEZ (Exclusive Economic Zone)."
