--- a/localisation/english/MD_focus_UKR_l_english.yml
+++ b/localisation/english/MD_focus_UKR_l_english.yml
@@ -136,7 +136,7 @@
  ukraine_maidan_east.1.a: "Suddenly"
  ukraine_maidan_east.2.t: "Deputies Are Self-Organizing"
  ukraine_maidan_east.2.d: "The protests began to gain momentum and now local deputies have joined them, which declare rather dangerous slogans"
- ukraine_maidan_east.2.a: "Worryingly"
+ ukraine_maidan_east.2.a: "Worrying"
  ukraine_maidan_east.4.t: "An Attempt At Negotiation"
  ukraine_maidan_east.4.d: "We will try to negotiate with the deputies, it is still possible to resolve the conflict peacefully"
  ukraine_maidan_east.4.a: "We Hope For The Best"
@@ -171,7 +171,7 @@
  ukraine_maidan_east.13.a: "How Many Are There?"
  ukraine_maidan_east.17.t: "The Donbass Rebellion"
  ukraine_maidan_east.17.d: "An armed uprising has begun in the Donetsk and Luhansk regions. The Berkut units proved to be very useful for the rebels to disarm some of the military units stationed there."
- ukraine_maidan_east.17.a: "Damn it!"
+ ukraine_maidan_east.17.a: "Damn"
  ukraine_maidan_east.18.t: "The Odessa Mutiny"
  ukraine_maidan_east.18.d: "Berkut's defection to the rebels greatly inspired the separatists in Odessa, where they also announced the creation of a people's republic"
  ukraine_maidan_east.18.a: "How Many Are There?"
@@ -221,7 +221,7 @@
  #Russia Annexes the Crimea
  ukraine_maidan.2.t: "Russia Annexes Crimea"
  ukraine_maidan.2.d: "The people of Ukraine have broken away. They have sought the support of the Russian government. Crimeans have passed an overwhelming referendum to allow the state to be absorbed into the Russian state. Russian troops stationed near the Crimea have flooded into the region and quickly seized key points in the state. The troops have been welcomed with open arms by traitors and nothing more. One day we will regain the territory that is rightfully ours!"
- ukraine_maidan.2.a: "Interesting."
+ ukraine_maidan.2.a: "Interesting"
  #Russia Denies the People of Ukraine
  ukraine_maidan.3.t: "Russia Denies the People of Ukraine"
  ukraine_maidan.3.d: "The traitors in Crimea have finally held their silly referendum to try and secede from us. The people of Russia have sought to encourage this silly course of behavior for a long time. It is a mystery why the Russians have denied the people of Crimea. However, it is appreciated that they did not undermine us further by seizing control of the region. Time will tell what the decision has caused for this."
@@ -819,11 +819,11 @@
  ukraine_regions.9.a: "Sad"
  ukraine_regions.10.t: "Cooperation With The CIS"
  ukraine_regions.10.d: "We have not actively cooperated with the CIS countries in recent years, and a certain part of the opposition-minded population may also be outraged by our decision to continue cooperation, but we must decide whether we should do this?."
- ukraine_regions.10.a: "Of course"
+ ukraine_regions.10.a: "Of Course"
  ukraine_regions.10.b: "No"
  ukraine_regions.11.t: "Association Negotiations With The EU"
  ukraine_regions.11.d: "It is time to start the association negotiations with the European Union, which we have been striving to start for so long, it is time to finally decide whether we will start them?."
- ukraine_regions.11.a: "Of course"
+ ukraine_regions.11.a: "Of Course"
  ukraine_regions.11.b: "No"
  ukraine_regions.12.t: "Issue of The Status of Donbass"
  ukraine_regions.12.d: "For many years we have been hearing about proposals to give a special status to Donbass, thereby starting the slow process of federalization of Ukraine. This is a serious decision that we must make, realizing that there will be no turning back."
@@ -831,46 +831,46 @@
  ukraine_regions.12.b: "Let's Leave It As It Is"
  ukraine_nato_help.1.t: "[FROM.GetName] Provides Monetary Help"
  ukraine_nato_help.1.d: "[FROM.GetName] reached out with package for our war effort.\nNext Package will include monetary support"
- ukraine_nato_help.1.a: "Good."
+ ukraine_nato_help.1.a: "Good"
  ukraine_nato_help.2.t: "[FROM.GetName] Provides Help"
  ukraine_nato_help.2.d: "[FROM.GetName] reached out with package for our war effort.\nNext Package will include light equipment and support"
- ukraine_nato_help.2.a: "Good."
+ ukraine_nato_help.2.a: "Good"
  ukraine_nato_help.3.t: "[FROM.GetName] Provides Help"
  ukraine_nato_help.3.d: "[FROM.GetName] reached out with package for our war effort.\nNext Package will include medium equipment for out brigades"
- ukraine_nato_help.3.a: "Good."
+ ukraine_nato_help.3.a: "Good"
  ukraine_nato_help.4.t: "[FROM.GetName] Provides Help"
  ukraine_nato_help.4.d: "[FROM.GetName] reached out with package for our war effort.\nNext Package will include heavy weaponry and equipment"
- ukraine_nato_help.4.a: "Good."
+ ukraine_nato_help.4.a: "Good"
  ukraine_nato_help.5.t: "[FROM.GetName] Procures Infantry Equipment"
  ukraine_nato_help.5.d: "[FROM.GetName] reached out with package for our war effort.\nNext Package, produced locally for investor's money will include infantry equipment"
- ukraine_nato_help.5.a: "Good."
+ ukraine_nato_help.5.a: "Good"
  ukraine_nato_help.6.t: "[FROM.GetName] Procures Support Equipment"
  ukraine_nato_help.6.d: "[FROM.GetName] reached out with package for our war effort.\nNext Package, produced locally for investor's money will include support equipment"
- ukraine_nato_help.6.a: "Good."
+ ukraine_nato_help.6.a: "Good"
  ukraine_nato_help.7.t: "[FROM.GetName] Procures AT and AA Equipment"
  ukraine_nato_help.7.d: "[FROM.GetName] reached out with package for our war effort.\nNext Package, produced locally for investor's money will include anti-tank and anti-air infantry weaponry"
- ukraine_nato_help.7.a: "Good."
+ ukraine_nato_help.7.a: "Good"
  ukraine_nato_help.8.t: "[FROM.GetName] Procures Light Vehicles"
  ukraine_nato_help.8.d: "[FROM.GetName] reached out with package for our war effort.\nNext Package, produced locally for investor's money will include utility trucks, MRAPs and IMVs"
- ukraine_nato_help.8.a: "Good."
+ ukraine_nato_help.8.a: "Good"
  ukraine_nato_help.9.t: "[FROM.GetName] Procures APC Equipment"
  ukraine_nato_help.9.d: "[FROM.GetName] reached out with package for our war effort.\nNext Package, produced locally for investor's money will include APC"
- ukraine_nato_help.9.a: "Good."
+ ukraine_nato_help.9.a: "Good"
  ukraine_nato_help.10.t: "[FROM.GetName] Procures IFV Equipment"
  ukraine_nato_help.10.d: "[FROM.GetName] reached out with package for our war effort.\nNext Package, produced locally for investor's money will include IFV"
- ukraine_nato_help.10.a: "Good."
+ ukraine_nato_help.10.a: "Good"
  ukraine_nato_help.11.t: "[FROM.GetName] Provides Figther Planes"
  ukraine_nato_help.11.d: "[FROM.GetName] reached out with package for our war effort.\nNext Package will include fighter planes"
- ukraine_nato_help.11.a: "Good."
+ ukraine_nato_help.11.a: "Good"
  ukraine_nato_help.12.t: "[FROM.GetName] Provides Strike Planes"
  ukraine_nato_help.12.d: "[FROM.GetName] reached out with package for our war effort.\nNext Package will include strike planes"
- ukraine_nato_help.12.a: "Good."
+ ukraine_nato_help.12.a: "Good"
  ukraine_nato_help.13.t: "[FROM.GetName] Procures Artillery Equipment"
  ukraine_nato_help.13.d: "[FROM.GetName] reached out with package for our war effort.\nNext Package produced locally for investor's money will include self-propelled artillery and ammo"
- ukraine_nato_help.13.a: "Good."
+ ukraine_nato_help.13.a: "Good"
  ukraine_nato_help.14.t: "[FROM.GetName] Procures Tanks"
  ukraine_nato_help.14.d: "[FROM.GetName] reached out with package for our war effort.\nNext Package produced locally for investor's money will include MBTs"
- ukraine_nato_help.14.a: "Good."
+ ukraine_nato_help.14.a: "Good"
 
  #### PARLIAMENT ###
  ukraine_parliament.100.d: "Pro-Russian Bloc Wins Majority of the Seats"
@@ -975,7 +975,7 @@
  ukraine_parliament.30.b: "Perhaps their pockets have been a little empty?"
  ukraine_parliament.31.t: "Several seats in the Parliament have started supporting us!"
  ukraine_parliament.31.d: "Some members of the Parliament have begun praising our recent successes, leading to an increase of support within the assembly."
- ukraine_parliament.31.a: "Great!"
+ ukraine_parliament.31.a: "Great"
  ukraine_parliament.32.t: "Parliament pushes more support for Locals!"
  ukraine_parliament.32.d: "The Parliament has allocated a large budget to give to the locals around the country, and our administration has caught wind of it, with some members of the cabinet believing that the money could be allocated elsewhere for better use."
  ukraine_parliament.32.a: "The money is for the Locals!"
@@ -1007,10 +1007,10 @@
 
  ukr_sabotage.1.t: "Ukraine attacked our stockpiles"
  ukr_sabotage.1.d: "In recent drone attack, Ukraine has managed to attack a warehouse with some old heavy equipment."
- ukr_sabotage.1.a: "Damn it."
+ ukr_sabotage.1.a: "Damn"
  ukr_sabotage.2.t: "Ukraine attacked our stockpiles"
  ukr_sabotage.2.d: "In recent drone attack, Ukraine has managed to attack a warehouse with some old light equipment."
- ukr_sabotage.2.a: "Damn it."
+ ukr_sabotage.2.a: "Damn"
  ukr_sabotage.3.t: "Ukraine attacked our military production"
  ukr_sabotage.3.d: "In recent drone attack, Ukraine has managed to attack one of our manufacturers, we have suffered temporary damage."
  ukr_sabotage.3.a: "They will pay for it."
@@ -1147,7 +1147,7 @@
  ukraine_our_ukraine.4.b: "We Are Not Interested In This."
  ukraine_our_ukraine.5.t: "Investments in Ukraine."
  ukraine_our_ukraine.5.d: "They agreed to invest in us."
- ukraine_our_ukraine.5.a: "Good!"
+ ukraine_our_ukraine.5.a: "Good"
  ukraine_our_ukraine.6.t: "Investments in Ukraine."
  ukraine_our_ukraine.6.d: "They refused our offer to invest in us."
  ukraine_our_ukraine.6.a: "Sad"
@@ -1205,7 +1205,7 @@
  ukr_zelenskiy.1.a: "Surprising Development"
  ukr_zelenskiy.2.t: "Sluha Narodu"
  ukr_zelenskiy.2.d: "Unexpected news has shaken the whole Ukraine. Today, as a result of the congress, the Servant of the People party, named after the popular movie, was created. Many believe that this party was created as a PR campaign for the movie, while others claim that this party was created to promote the famous comedian Volodymyr Zelenskyy as a candidate for the presidency. Although Zelensky himself denies his involvement, his evasive answers may become the basis for further speculation."
- ukr_zelenskiy.2.a: "Interesting."
+ ukr_zelenskiy.2.a: "Interesting"
  ##########Cosmetic tags##########
  UKR_HersonUkraine: "The Republic of Ukraine"
  UKR_TaSamayaUkraine: "The Same Ukraine"
@@ -1667,7 +1667,7 @@
  ukraine_kommi.11.a: "Good"
  ukraine_kommi.12.t: "Russian Guarantee of Protection"
  ukraine_kommi.12.d: "The Russian government has refused to provide us with guarantees of independence"
- ukraine_kommi.12.a: "Damn it"
+ ukraine_kommi.12.a: "Damn"
  ukraine_kommi.13.t: "Gas Contract With Ukraine."
  ukraine_kommi.13.d: "Ukraine has offered us to reduce the purchase prices for our gas contract, in return the intermediary between us will be eliminated, thereby we will have more influence on them, should we agree?."
  ukraine_kommi.13.a: "We Will Sign This"
